--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -1,3 +1,4 @@
+#Thu, 10 Aug 2017 01:24:26 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -95,7 +96,7 @@ Display_Helpdesk=Please enter search data for the user.
 Display_HelpdeskOtpValidation=Instruct the user to load their mobile authentication app and share the current pass code.
 Display_Hour=hour
 Display_Hours=hours
-Display_IdleTimeout=Idle Timeout:
+Display_IdleTimeout=Idle Timeout\:
 Display_IdleWarningMessage=Your session is about to timeout.  Please click anywhere on this page to resume.
 Display_IdleWarningTitle=Idle Timeout
 Display_JavascriptRequired=Javascript is required to view this page.
@@ -132,7 +133,7 @@ Display_PleaseWait=Loading...
 Display_PleaseWaitNewUser=Your new account is being configured. This process may take several minutes, please be patient.
 Display_PleaseWaitPassword=Your password is being changed. This process may take several minutes, please be patient.
 Display_Random=Random
-Display_RecoverVerificationChoice=Please select one of the following methods to verify your identity.  Note: If your administrator requires multiple forms of verification, you will be redirected back to this page until all verification criteria is met.
+Display_RecoverVerificationChoice=Please select one of the following methods to verify your identity.  Note\: If your administrator requires multiple forms of verification, you will be redirected back to this page until all verification criteria is met.
 Display_RecoverTokenSendChoices=To verify your identity, a security code will be sent to you.  Please choose which method you would prefer to receive your security code.
 Display_RecoverTokenSendChoiceEmail=Send code to your registered email address.
 Display_RecoverTokenSendChoiceSMS=Send code to your mobile phone using text messaging (SMS).
@@ -168,9 +169,9 @@ Display_SetupOtp_Other_Title=Other
 Display_SetupOtp_Other_Steps=<b>Find a compatible two-factor app.</b><ul><li>Try searching your device's app store for <b>Google Authenticator</b>.<br/>Many devices have compatible apps.</li><li>Try looking for an app that supports "<b>TOTP security tokens"</b> or "RFC6238"</li><li>Download and install the application.</li></ul><b>Next, open and configure the app.</b><ol><li>Enter the data below or scan the code as the app instructs.</li><li>Once you have configured the app, click the continue button.</li></ol>
 Display_TokenDestination=Token Destination
 Display_TokenResend=Your security code should arrive right away.  If you have waited for a while and haven't yet received a code, click the resend code button to receive a new code.
-Display_UsernameHeader=@User:ID@
-Display_UsernameFooter=@User:ID@
-Display_WarnExistingOtpSecretTime=You have already enrolled your device on <span class="timestamp">%1%</span>.  You can test your current device by typing in the generated code below.  If you continue, you can re-configure your current device.
+Display_UsernameHeader=@User\:ID@
+Display_UsernameFooter=@User\:ID@
+Display_WarnExistingOtpSecretTime=You have already enrolled your device on <span class\="timestamp">%1%</span>.  You can test your current device by typing in the generated code below.  If you continue, you can re-configure your current device.
 Display_WarnExistingOtpSecret=You have already enrolled your device.  You can test your current device by typing in the generated code below.  If you continue, you can re-configure your current device.
 Display_WarnExistingResponseTime=You have already setup your challenge/response answers on <span class\="timestamp">%1%</span>.  If you continue, you can re-answer your questions.
 Display_WarnExistingResponse=You have already setup your challenge/response answers.  If you continue, you can re-answer your questions.
@@ -274,7 +275,7 @@ Long_Title_VerificationSend=Before this user can be selected, the user's identit
 Title_AnsweredQuestions=Answered Questions
 Title_ActivateUser=Activate Account
 Title_Admin=Administration
-Title_Application=Password Self Service
+Title_Application=Self Service Password Reset
 Title_Captcha=Verification
 Title_ChangePassword=Change Password
 Title_ConfirmResponses=Confirm Security Questions
@@ -312,8 +313,8 @@ Title_SetupOtpSecret=Setup Mobile App Authentication
 Title_Shortcuts=Shortcuts
 Title_Status=Status
 Title_Success=Success
-Title_TitleBarAuthenticated=@User\:ID@  Password Self Service
-Title_TitleBar=Password Self Service
+Title_TitleBarAuthenticated=@User\:ID@  Self Service Password Reset
+Title_TitleBar=Self Service Password Reset
 Title_UpdateProfile=Update Profile
 Title_UpdateProfileConfirm=Confirm Profile Data
 Title_UserData=My Data
@@ -325,7 +326,7 @@ Title_DeleteAccount=Delete My Account
 Title_Management=Management
 Title_DirectReports=Direct Reports
 Title_Organization=Organization
-Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your password. Try the following to make your password stronger:<ul><li>Make the password longer</li><li>Do not repeat letters or numbers</li><li>Use mixed (upper and lower) case letters</li><li>Add more numbers</li><li>Add more symbol characters</li></ul>
+Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your password. Try the following to make your password stronger\:<ul><li>Make the password longer</li><li>Do not repeat letters or numbers</li><li>Use mixed (upper and lower) case letters</li><li>Add more numbers</li><li>Add more symbol characters</li></ul>
 Confirm_DeleteUser=Are you sure you wish to proceed?  If you continue, the selected user will be deleted permanently.  This can not be undone.
 Confirm=Are you sure you wish to proceed?
 Value_False=False
