--- a/server/src/main/resources/password/pwm/i18n/Display_ca.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_ca.properties
@@ -1,3 +1,4 @@
+#Thu, 10 Aug 2017 01:24:26 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -132,14 +133,14 @@ Display_PleaseWait=S'est\u00e0 carregant...
 Display_PleaseWaitNewUser=S'est\u00e0 configurant el compte nou. Aquest proc\u00e9s pot durar uns quants minuts, tingui paci\u00e8ncia.
 Display_PleaseWaitPassword=S'est\u00e0 canviant la contrasenya. Aquest proc\u00e9s pot durar uns quants minuts, tingui paci\u00e8ncia.
 Display_Random=Aleatori
-Display_RecoverVerificationChoice=Seleccioneu un dels m\u00e8todes seg\u00fcents per verificar la vostra identitat. Tingueu en compte que, si l'administrador exigeix diversos m\u00e8todes de verificaci\u00f3, tornareu a aquesta p\u00e0gina fins que compliu tots els criteris de comprovaci\u00f3.
+Display_RecoverVerificationChoice=Seleccioneu un dels m\u00e8todes que hi ha a continuaci\u00f3 per verificar la vostra identitat. Nota\: si l'administrador us sol\u00b7licita diverses maneres de verificaci\u00f3, se us redirigir\u00e0 a aquesta p\u00e0gina de nou fins que compliu tots els criteris de verificaci\u00f3.
 Display_RecoverTokenSendChoices=Per verificar la seva identitat, se li enviar\u00e0 un codi de seguretat. Tri\u00ef el m\u00e8tode pel qual prefereix rebre'l.
 Display_RecoverTokenSendChoiceEmail=Enviar el codi al seu correu electr\u00f2nic registrat.
 Display_RecoverTokenSendChoiceSMS=Enviar el codi al seu tel\u00e8fon m\u00f2bil amb un missatge de text (SMS).
 Display_RecoverChoiceReset=Establir una contrasenya nova. Si ha oblidat la contrasenya i vol establir-ne una de nova, cliqui aqu\u00ed. El seu compte tamb\u00e9 es desbloquejar\u00e0 quan estableixi una contrasenya nova.
 Display_RecoverChoiceUnlock=Desbloquejar el compte. Si recorda la contrasenya, pot desbloquejar el compte seleccionant aquesta opci\u00f3. No es canviar\u00e0 la contrasenya.
-Display_RecoverEnterCode=Per verificar la seva identitat, se li ha enviat un codi de seguretat. Cliqui l'enlla\u00e7 del correu o copi\u00ef i enganxi aqu\u00ed el codi de seguretat.
-Display_RecoverEnterCodeSMS=Per verificar la seva identitat, se li ha enviat un codi de seguretat per SMS. Introdueixi aqu\u00ed el codi de seguretat del missatge.
+Display_RecoverEnterCode=Per verificar la seva identitat, se li ha enviat un codi de seguretat a %1%. Cliqui l'enlla\u00e7 del correu o copi\u00ef i enganxi aqu\u00ed el codi de seguretat.
+Display_RecoverEnterCodeSMS=Per verificar la seva identitat, se li ha enviat un codi de seguretat al tel\u00e8fon %1%. Introdueixi aqu\u00ed el codi de seguretat del missatge.
 Display_RecoverPassword=Respongui les preguntes seg\u00fcents. Si ho fa correctament, podr\u00e0 restablir la contrasenya.
 Display_RecoverPasswordChoices=S'ha bloquejat el seu compte pels excessius intents d'inici de sessi\u00f3 incorrectes. Pot continuar desbloquejant el compte o canviant la contrasenya.
 Display_RecoverRandomResponses=Per continuar, ha de respondre les preguntes seg\u00fcents.
@@ -172,7 +173,7 @@ Display_TokenDestination=Destinaci\u00f3 del testimoni
 Display_TokenResend=El seu codi de seguretat hauria d'arribar aviat. Si ja ha passat una estona i encara no ha rebut cap codi, faci clic al bot\u00f3 Torna a enviar el codi per rebre'n un de nou.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Ja heu inscrit el vostre dispositiu (<span class="timestamp">%1%</span>). Podeu provar el dispositiu actual tocant el codi que s'ha generat a continuaci\u00f3. Si continueu, podreu tornar a configurar-lo.
+Display_WarnExistingOtpSecretTime=Ja ha inscrit el dispositiu el dia (<span class\="timestamp">%1%</span>). Pot provar el seu dispositiu actual escrivint el codi generat aqu\u00ed sota. Si continua, pot tornar a configurar el dispositiu actual..
 Display_WarnExistingOtpSecret=Ja ha inscrit el tel\u00e8fon. Pot provar el seu dispositiu actual escrivint el codi generat aqu\u00ed sota. Si continua, pot tornar a configurar el dispositiu actual.
 Display_WarnExistingResponseTime=Ja ha configurat les preguntes desafiament/resposta el <span class\="timestamp">%1%</span>. Si continua, pot tornar a respondre les preguntes.
 Display_WarnExistingResponse=Ja ha configurat les preguntes desafiament/resposta. Si continua, pot tornar a respondre les preguntes.
@@ -297,6 +298,8 @@ Title_PasswordPolicy=Pol\u00edtica de contrasenyes
 Title_PasswordStrength=Seguretat de la contrasenya
 Title_PasswordWarning=Av\u00eds de contrasenya
 Title_PeopleSearch=Cerca de persones
+Title_PeopleSearchCard=Targetes de cerca de persones
+Title_PeopleSearchTable=Taula de cerca de persones
 Title_PleaseWait=Esperi
 Title_RandomPasswords=Contrasenyes aleat\u00f2ries
 Title_RecentVerifications=Verificacions recents
