--- a/server/src/main/resources/password/pwm/i18n/Display_da.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_da.properties
@@ -1,3 +1,4 @@
+#Thu, 10 Aug 2017 01:24:26 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -132,14 +133,14 @@ Display_PleaseWait=Indl\u00e6ser ...
 Display_PleaseWaitNewUser=Din nye konto konfigureres. Denne proces kan tage et par minutter. Vent et \u00f8jeblik.
 Display_PleaseWaitPassword=Din adgangskode \u00e6ndres. Denne proces kan tage et par minutter. Vent et \u00f8jeblik.
 Display_Random=Tilf\u00e6ldig
-Display_RecoverVerificationChoice=V\u00e6lg en af f\u00f8lgende metoder til at bekr\u00e6fte din identitet. Bem\u00e6rk\: Hvis din administrator kr\u00e6ver flere former for bekr\u00e6ftelse, omdirigeres du til denne side, indtil alle bekr\u00e6ftelseskriterier er opfyldt.
+Display_RecoverVerificationChoice=V\u00e6lg en af f\u00f8lgende metoder for at bekr\u00e6fte din identitet. Bem\u00e6rk! Hvis din administrator kr\u00e6ver flere former for bekr\u00e6ftelse, omdirigeres du til denne side, indtil alle bekr\u00e6ftelseskriterier er opfyldt.
 Display_RecoverTokenSendChoices=Der sendes en sikkerhedskode til dig for at bekr\u00e6fte din identitet. V\u00e6lg, hvilken metode du foretr\u00e6kker at modtage sikkerhedskoden med.
 Display_RecoverTokenSendChoiceEmail=Send koden til din registrerede e-mailadresse.
 Display_RecoverTokenSendChoiceSMS=Send koden til din mobiltelefon via sms.
 Display_RecoverChoiceReset=Angiv en ny adgangskode. Hvis du har glemt adgangskoden og gerne vil angive en ny, skal du klikke her. Din konto l\u00e5ses op, n\u00e5r du angiver en ny adgangskode.
 Display_RecoverChoiceUnlock=L\u00e5s din konto op. Hvis du kan huske din adgangskode, kan du l\u00e5se din konto op ved at v\u00e6lge denne indstilling. Adgangskoden \u00e6ndres ikke.
-Display_RecoverEnterCode=Der blev sendt en sikkerhedskode til dig for at bekr\u00e6fte din identitet. Klik p\u00e5 linket i e-mailen, eller kopi\u00e9r og inds\u00e6t sikkerhedskoden her.
-Display_RecoverEnterCodeSMS=Der blev sendt en sikkerhedskode til dig via sms for at bekr\u00e6fte din identitet. Angiv sikkerhedskoden fra meddelelsen her.
+Display_RecoverEnterCode=Der blev sendt en sikkerhedskode til dig p\u00e5 %1% for at bekr\u00e6fte din identitet. Klik p\u00e5 linket i e-mailen, eller kopi\u00e9r og inds\u00e6t sikkerhedskoden her.
+Display_RecoverEnterCodeSMS=Der blev sendt en sikkerhedskode til din telefon p\u00e5 %1% for at bekr\u00e6fte din identitet. Angiv sikkerhedskoden fra meddelelsen her.
 Display_RecoverPassword=Besvar f\u00f8lgende sp\u00f8rgsm\u00e5l. Hvis du svarer rigtigt p\u00e5 sp\u00f8rgsm\u00e5lene, kan du derefter nulstille adgangskoden.
 Display_RecoverPasswordChoices=Din konto er blevet l\u00e5st p\u00e5 grund af for mange forkerte logonfors\u00f8g. Du kan forts\u00e6tte ved at l\u00e5se din konto op eller \u00e6ndre din adgangskode.
 Display_RecoverRandomResponses=Du skal svare p\u00e5 f\u00f8lgende sp\u00f8rgsm\u00e5l for at forts\u00e6tte.
@@ -167,12 +168,12 @@ Display_SetupOtp_iPhone_Steps=<b>Tryk p\u00e5 ikonet App Store p\u00e5 din iPhon
 Display_SetupOtp_Other_Title=Andet
 Display_SetupOtp_Other_Steps=<b>Find en kompatibel app til to faktor-godkendelse.</b><ul><li>Pr\u00f8v at s\u00f8ge efter <b>Google Authenticator</b> i enhedens appbutik.<br/>Mange enheder har kompatible apps.</li><li>Pr\u00f8v at finde en app, der underst\u00f8tter "<b>TOTP-sikkerhedstokens"</b> eller "RFC6238"</li><li>Download og install\u00e9r appen.</li></ul><b>\u00c5bn og konfigurer derefter appen.</b><ol><li>Angiv dataene herunder, eller scan koden iht. vejledningen i appen.</li><li>N\u00e5r du har konfigureret appen, skal du klikke p\u00e5 knappen Forts\u00e6t.</li></ol>
 Display_TokenDestination=Tokendestination
-Display_TokenResend=Du b\u00f8r modtage din sikkerhedskode med det samme. Hvis du har ventet et stykket id og endnu ikke har modtaget koden, skal du klikke p\u00e5 knappen Send igen for at f\u00e5 tilsendt en ny kode.
+Display_TokenResend=Du b\u00f8r modtage din sikkerhedskode med det samme. Hvis du har ventet et stykke tid og endnu ikke har modtaget koden, skal du klikke p\u00e5 knappen Send igen for at f\u00e5 tilsendt en ny kode.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Du har allerede tilmeldt din enhed <span class="timestamp">%1%</span>. Du kan teste din aktuelle enhed ved at skrive den genererede kode herunder. Hvis du forts\u00e6tter, kan du konfigurere din aktuelle enhed igen.
+Display_WarnExistingOtpSecretTime=Du har allerede tilmeldt din enhed den <span class\="timestamp">%1%</span>. Du kan teste din aktuelle enhed ved at skrive den genererede kode herunder. Hvis du forts\u00e6tter, kan du konfigurere din aktuelle enhed igen.
 Display_WarnExistingOtpSecret=Du har allerede tilmeldt din enhed. Du kan teste din aktuelle enhed ved at skrive den genererede kode herunder. Hvis du forts\u00e6tter, kan du konfigurere din aktuelle enhed igen.
-Display_WarnExistingResponseTime=Du har allerede angivet dine verificeringssvar p\u00e5 <span class\="timestamp">%1%</span>. Hvis du forts\u00e6tter, kan du svare p\u00e5 sp\u00f8rgsm\u00e5lene igen.
+Display_WarnExistingResponseTime=Du har allerede angivet dine verificeringssvar den <span class\="timestamp">%1%</span>. Hvis du forts\u00e6tter, kan du svare p\u00e5 sp\u00f8rgsm\u00e5lene igen.
 Display_WarnExistingResponse=Du har allerede angivet dine verificeringssvar. Hvis du forts\u00e6tter, kan du svare p\u00e5 sp\u00f8rgsm\u00e5lene igen.
 Display_PleaseVerifyOtp=Angiv den sekscifrede bekr\u00e6ftelseskode fra din enhed. Hvis din enhed ikke er konfigureret til at give dig en bekr\u00e6ftelseskode, skal du g\u00e5 tilbage til forrige side og konfigurere enheden.
 Display_OtpRecoveryInfo=Hver af disse genoprettelseskoder kan bruges \u00e9n gang, hvis det skulle ske, at du ikke kan f\u00e5 adgang til din telefon. S\u00f8rg for at <a class\="pwm-link-print">udskrive denne side</a>, eller skriv disse koder ned, og gem dem et sikkert sted.
@@ -295,6 +296,8 @@ Title_PasswordPolicy=Politik for adgangskode
 Title_PasswordStrength=Styrke af adgangskode
 Title_PasswordWarning=Advarsel om adgangskode
 Title_PeopleSearch=S\u00f8gning efter personer
+Title_PeopleSearchCard=Kort til s\u00f8gning efter personer
+Title_PeopleSearchTable=Tabel til s\u00f8gning efter personer
 Title_PleaseWait=Vent et \u00f8jeblik
 Title_RandomPasswords=Tilf\u00e6ldige adgangskoder
 Title_RecentVerifications=Seneste bekr\u00e6ftelser
