--- a/server/src/main/resources/password/pwm/i18n/Display_de.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_de.properties
@@ -1,3 +1,4 @@
+#Thu, 10 Aug 2017 01:24:26 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -132,14 +133,14 @@ Display_PleaseWait=Wird geladen ...
 Display_PleaseWaitNewUser=Das neue Konto wird konfiguriert. Dieser Vorgang kann einige Minuten dauern. Bitte gedulden Sie sich.
 Display_PleaseWaitPassword=Das Passwort wird ge\u00e4ndert. Dieser Vorgang kann einige Minuten dauern. Bitte gedulden Sie sich.
 Display_Random=Zufall
-Display_RecoverVerificationChoice=W\u00e4hlen Sie eine der folgenden Methoden zur Identit\u00e4ts\u00fcberpr\u00fcfung. Hinweis: Wenn Ihr Administrator mehrere Formen der Verifizierung fordert, werden Sie so oft zu dieser Seite zur\u00fcckgeleitet, bis alle Verifizierungskriterien erf\u00fcllt sind.
+Display_RecoverVerificationChoice=W\u00e4hlen Sie eine der folgenden Methoden zur Identit\u00e4ts\u00fcberpr\u00fcfung. Hinweis\: Wenn Ihr Administrator mehrere Formen der Verifizierung fordert, werden Sie so oft zu dieser Seite zur\u00fcckgeleitet, bis alle Verifizierungskriterien erf\u00fcllt sind.
 Display_RecoverTokenSendChoices=Zur \u00dcberpr\u00fcfung Ihrer Identit\u00e4t wird Ihnen ein Sicherheitscode gesendet. W\u00e4hlen Sie aus, mit welcher Methode Sie den Sicherheitscode empfangen m\u00f6chten.
 Display_RecoverTokenSendChoiceEmail=Code an die registrierte Email-Adresse senden.
 Display_RecoverTokenSendChoiceSMS=Code in einer Textnachricht (SMS) an das Mobiltelefon senden.
 Display_RecoverChoiceReset=Legen Sie ein neues Passwort fest. Falls Sie Ihr Passwort vergessen haben und ein neues Passwort festlegen m\u00f6chten, klicken Sie hier. Ihr Konto wird auch entsperrt, wenn Sie ein neues Passwort festlegen.
 Display_RecoverChoiceUnlock=Entsperren Sie Ihr Konto. Wenn Sie sich an Ihr Passwort erinnern, k\u00f6nnen Sie das Konto durch Auswahl dieser Option entsperren. Das Passwort wird nicht ge\u00e4ndert.
-Display_RecoverEnterCode=Zur \u00dcberpr\u00fcfung Ihrer Identit\u00e4t wurde ihnen ein Sicherheitscode gesendet. Klicken Sie in der Email auf den Link oder kopieren Sie den Sicherheitscode und f\u00fcgen Sie ihn hier ein.
-Display_RecoverEnterCodeSMS=Zur \u00dcberpr\u00fcfung Ihrer Identit\u00e4t wurde Ihnen per SMS ein Sicherheitscode gesendet. Geben Sie den Sicherheitscode hier ein.
+Display_RecoverEnterCode=Zur \u00dcberpr\u00fcfung Ihrer Identit\u00e4t wurde Ihnen ein Sicherheitscode an %1% gesendet. Klicken Sie in der Email auf den Link oder kopieren Sie den Sicherheitscode und f\u00fcgen Sie ihn hier ein.
+Display_RecoverEnterCodeSMS=Zur \u00dcberpr\u00fcfung Ihrer Identit\u00e4t wurde Ihnen per SMS ein Sicherheitscode an %1% gesendet. Geben Sie den Sicherheitscode in der Nachricht hier ein.
 Display_RecoverPassword=Beantworten Sie die nachstehenden Fragen. Wenn Sie die Fragen richtig beantworten, k\u00f6nnen Sie anschlie\u00dfend Ihr Passwort zur\u00fccksetzen.
 Display_RecoverPasswordChoices=Das Konto wurde nach zu vielen falschen Anmeldeversuchen gesperrt. Zum Fortfahren m\u00fcssen Sie das Konto entsperren oder das Passwort \u00e4ndern.
 Display_RecoverRandomResponses=Beantworten Sie zum Fortfahren die folgenden Fragen.
@@ -170,7 +171,7 @@ Display_TokenDestination=Token-Ziel
 Display_TokenResend=Der Sicherheitscode sollte kurz nach der Anforderung ankommen. Wenn Sie bereits eine gewisse Zeit gewartet haben und keinen Code erhalten haben, klicken Sie auf die Schaltfl\u00e4che 'Code neu senden', damit Ihnen ein neuer Code gesendet wird.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Sie haben das Ger\u00e4t bereits am/um <span class="timestamp">%1%</span> registriert.  Um Ihr aktuelles Ger\u00e4t zu testen, geben Sie unten den generierten Code ein. Wenn Sie fortfahren, k\u00f6nnen Sie das aktuelle Ger\u00e4t neu konfigurieren.
+Display_WarnExistingOtpSecretTime=Sie haben das Ger\u00e4t bereits am/um <span class\="timestamp">%1%</span> registriert.  Um Ihr aktuelles Ger\u00e4t zu testen, geben Sie unten den generierten Code ein. Wenn Sie fortfahren, k\u00f6nnen Sie das aktuelle Ger\u00e4t neu konfigurieren.
 Display_WarnExistingOtpSecret=Sie haben das Ger\u00e4t bereits registriert. Um Ihr aktuelles Ger\u00e4t zu testen, geben Sie unten den generierten Code ein. Wenn Sie fortfahren, k\u00f6nnen Sie das aktuelle Ger\u00e4t neu konfigurieren.
 Display_WarnExistingResponseTime=Sie haben die Sicherheitsantworten bereits am <span class\="timestamp">%1%</span> eingerichtet. Wenn Sie fortfahren, k\u00f6nnen Sie die Fragen neu beantworten.
 Display_WarnExistingResponse=Sie haben die Sicherheitsantworten bereits eingerichtet. Wenn Sie fortfahren, k\u00f6nnen Sie die Fragen neu beantworten.
@@ -295,6 +296,8 @@ Title_PasswordPolicy=Passwortrichtlinie
 Title_PasswordStrength=Passwortst\u00e4rke
 Title_PasswordWarning=Passwortwarnung
 Title_PeopleSearch=Personensuche
+Title_PeopleSearchCard=Personensuchkarten
+Title_PeopleSearchTable=Personensuchtabelle
 Title_PleaseWait=Bitte warten
 Title_RandomPasswords=Zufallspassw\u00f6rter
 Title_RecentVerifications=Letzte \u00dcberpr\u00fcfungen
