--- a/server/src/main/resources/password/pwm/i18n/Display_en_CA.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_en_CA.properties
@@ -1,3 +1,4 @@
+#Thu, 10 Aug 2017 01:24:26 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -138,8 +139,8 @@ Display_RecoverTokenSendChoiceEmail=Send code to your registered email address.
 Display_RecoverTokenSendChoiceSMS=Send code to your mobile phone using text messaging (SMS).
 Display_RecoverChoiceReset=Set a new password. If you have forgotten your password and would like to set a new one, click here. Your account will also be unlocked when you set a new password.
 Display_RecoverChoiceUnlock=Unlock your account. If you remember your password, you can unlock your account by selecting this option. Your password will not be changed.
-Display_RecoverEnterCode=To verify your identity, a security code has been sent to you. Please click the link in the email or copy and paste the security code here.
-Display_RecoverEnterCodeSMS=To verify your identity, a security code has been sent to you by SMS. Please enter the security code in the message here.
+Display_RecoverEnterCode=To verify your identity, a security code has been sent to you at %1%. Please click the link in the email or copy and paste the security code here.
+Display_RecoverEnterCodeSMS=To verify your identity, a security code has been sent to your phone at %1%. Please enter the security code in the message here.
 Display_RecoverPassword=Please answer the following questions. If you answer these questions correctly, you will then be able to reset your password.
 Display_RecoverPasswordChoices=Your account has been locked due to excessive incorrect login attempts. You may continue by unlocking your account or by changing your password.
 Display_RecoverRandomResponses=You must answer the following questions to continue.
@@ -170,7 +171,7 @@ Display_TokenDestination=Token Destination
 Display_TokenResend=Your security code should arrive right away. If you have waited for a while and haven't yet received a code, click the Resend Code button to receive a new code.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=You have already enrolled your device on <span class="timestamp">%1%</span>. You can test your current device by typing in the generated code below. If you continue, you can re-configure your current device.
+Display_WarnExistingOtpSecretTime=You have already enrolled your device on <span class\="timestamp">%1%</span>. You can test your current device by typing in the generated code below. If you continue, you can re-configure your current device.
 Display_WarnExistingOtpSecret=You have already enrolled your device. You can test your current device by typing in the generated code below. If you continue, you can reconfigure your current device.
 Display_WarnExistingResponseTime=You have already set up your challenge/response answers on <span class\="timestamp">%1%</span>. If you continue, you can answer your questions again.
 Display_WarnExistingResponse=You have already set up your challenge/response answers. If you continue, you can answer your questions again.
@@ -295,6 +296,8 @@ Title_PasswordPolicy=Password Policy
 Title_PasswordStrength=Password Strength
 Title_PasswordWarning=Password Warning
 Title_PeopleSearch=People Search
+Title_PeopleSearchCard=People Search Cards
+Title_PeopleSearchTable=People Search Table
 Title_PleaseWait=Please Wait
 Title_RandomPasswords=Random Passwords
 Title_RecentVerifications=Recent Verifications
