--- a/server/src/main/resources/password/pwm/i18n/Display_es.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_es.properties
@@ -1,3 +1,4 @@
+#Thu, 10 Aug 2017 01:24:26 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -138,8 +139,8 @@ Display_RecoverTokenSendChoiceEmail=Enviar el c\u00f3digo a su direcci\u00f3n de
 Display_RecoverTokenSendChoiceSMS=Enviar el c\u00f3digo a su tel\u00e9fono m\u00f3vil mediante mensaje de texto (SMS).
 Display_RecoverChoiceReset=Establezca una nueva contrase\u00f1a. Si ha olvidado su contrase\u00f1a y desea establecer una nueva, haga clic aqu\u00ed. Su cuenta se desbloquear\u00e1 tambi\u00e9n al configurar una nueva contrase\u00f1a.
 Display_RecoverChoiceUnlock=Desbloquee su cuenta. Si recuerda su contrase\u00f1a, puede desbloquear su cuenta seleccionando esta opci\u00f3n. No se modificar\u00e1 su contrase\u00f1a.
-Display_RecoverEnterCode=Para verificar su identidad, se le ha enviado un c\u00f3digo de seguridad. Haga clic en el enlace del correo electr\u00f3nico o copie y pegue el c\u00f3digo de seguridad aqu\u00ed.
-Display_RecoverEnterCodeSMS=Para verificar su identidad, se le ha enviado un c\u00f3digo de seguridad por SMS. Introduzca aqu\u00ed el c\u00f3digo de seguridad en este mensaje.
+Display_RecoverEnterCode=Para verificar su identidad, le hemos enviado un c\u00f3digo de seguridad a %1%. Haga clic en el enlace del correo electr\u00f3nico o copie y pegue el c\u00f3digo de seguridad aqu\u00ed.
+Display_RecoverEnterCodeSMS=Para verificar su identidad, le hemos enviado un c\u00f3digo de seguridad a su tel\u00e9fono %1%. Introduzca el c\u00f3digo de seguridad en este mensaje.
 Display_RecoverPassword=Conteste las siguientes preguntas. Si contesta estas preguntas correctamente, podr\u00e1 restablecer su contrase\u00f1a.
 Display_RecoverPasswordChoices=Su cuenta se ha bloqueado porque ha realizado demasiados intentos fallidos de entrada. Para continuar, desbloquee la cuenta o cambie la contrase\u00f1a.
 Display_RecoverRandomResponses=Debe contestar las siguientes preguntas para continuar.
@@ -170,7 +171,7 @@ Display_TokenDestination=Destino del testigo
 Display_TokenResend=Su c\u00f3digo de seguridad debe llegar inmediatamente. Si lleva esperando un rato y a\u00fan no ha recibido un c\u00f3digo, haga clic en el bot\u00f3n Volver a enviar c\u00f3digo para recibir un c\u00f3digo nuevo.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Ha inscrito su dispositivo el <span class="timestamp">%1%</span>. Puede probar el dispositivo actual introduciendo a continuaci\u00f3n el c\u00f3digo generado. Si contin\u00faa, puede volver a configurar el dispositivo actual.
+Display_WarnExistingOtpSecretTime=Ya ha inscrito su dispositivo el <span class\="timestamp">%1%</span>. Puede probar el dispositivo actual introduciendo a continuaci\u00f3n el c\u00f3digo generado. Si contin\u00faa, puede volver a configurar el dispositivo actual.
 Display_WarnExistingOtpSecret=Ya ha inscrito su dispositivo. Puede probar su dispositivo actual introduciendo el c\u00f3digo generado a continuaci\u00f3n. Si contin\u00faa, puede volver a configurar su dispositivo actual.
 Display_WarnExistingResponseTime=Ya ha configurado sus respuestas a preguntas de seguridad el <span class\="timestamp">%1%</span>. Si contin\u00faa, podr\u00e1 volver a contestar sus preguntas.
 Display_WarnExistingResponse=Ya ha configurado su pregunta desaf\u00edo/respuestas. Si contin\u00faa, podr\u00e1 volver a contestar sus preguntas.
@@ -295,6 +296,8 @@ Title_PasswordPolicy=Directiva de contrase\u00f1as
 Title_PasswordStrength=Seguridad de contrase\u00f1a
 Title_PasswordWarning=Advertencia de contrase\u00f1a
 Title_PeopleSearch=B\u00fasqueda de personas
+Title_PeopleSearchCard=Tarjetas de b\u00fasqueda de personas
+Title_PeopleSearchTable=Tabla de b\u00fasqueda de personas
 Title_PleaseWait=Un momento, por favor
 Title_RandomPasswords=Contrase\u00f1as aleatorias
 Title_RecentVerifications=Verificaciones recientes
