--- a/server/src/main/resources/password/pwm/i18n/Display_fr_CA.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_fr_CA.properties
@@ -1,3 +1,4 @@
+#Thu, 10 Aug 2017 01:24:26 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -72,7 +73,7 @@ Display_CaptchaGetAudio=Obtenir un code CAPTCHA sonore
 Display_CaptchaGetImage=Obtenir un code CAPTCHA sous forme d'image
 Display_CaptchaHelp=Aide
 Display_CaptchaRefresh=Rafra\u00eechir
-Display_ChangePassword=Veuillez \u00e9diter le mot de passe et s\u00e9curiser le nouveau mot de passe. Apr\u00e8s avoir entr\u00e9 le nouveau mot de passe, cliquez sur le bouton \u00c9diter le mot de passe. Si vous devez le noter sur papier, veillez \u00e0 le conserver en lieu s\u00fbr. Votre nouveau mot de passe doit r\u00e9pondre aux exigences suivantes\:
+Display_ChangePassword=Veuillez \u00e9diter le mot de passe et s\u00e9curiser le nouveau mot de passe. Apr\u00e8s avoir entr\u00e9 le nouveau mot de passe, cliquez sur le bouton \u00c9diter le mot de passe. Si vous devez le noter sur papier, veillez \u00e0 le conserver en lieu s\u00fbr. Votre nouveau mot de passe doit r\u00e9pondre aux exigences suivantes \:
 Display_ChangePasswordForm=Entrez les donn\u00e9es suivantes. Elles serviront \u00e0 v\u00e9rifier votre identit\u00e9 avant que vous puissiez changer votre mot de passe.
 Display_CheckingData=V\u00e9rification des donn\u00e9es...
 Display_CheckingPassword=V\u00e9rification du mot de passe...
@@ -122,9 +123,9 @@ Display_PasswordExpired=Votre mot de passe est arriv\u00e9 \u00e0 expiration. Vo
 Display_PasswordGeneration=Les mots de passe suivants ont \u00e9t\u00e9 g\u00e9n\u00e9r\u00e9s pour vous de mani\u00e8re al\u00e9atoire. Ils sont bas\u00e9s sur des mots r\u00e9els afin de faciliter leur m\u00e9morisation, mais ont \u00e9t\u00e9 modifi\u00e9s pour qu'ils ne soient pas faciles \u00e0 deviner.
 Display_PasswordNoExpire=Votre mot de passe n'a pas de date d'expiration.
 Display_PasswordPrompt=Entrez votre nouveau mot de passe
-Display_PasswordStrengthHigh=Force\: <b>Fort</b>
-Display_PasswordStrengthLow=Force\: <b>Faible</b>
-Display_PasswordStrengthMedium=Force\: <b>Correct</b>
+Display_PasswordStrengthHigh=Force \: <b>Fort</b>
+Display_PasswordStrengthLow=Force \: <b>Faible</b>
+Display_PasswordStrengthMedium=Force \: <b>Correct</b>
 Display_PasswordReplicationStatus=R\u00e9plication de mot de passe (progression %1%)
 Display_PasswordWarn=<b>Votre mot de passe va bient\u00f4t expirer</b>. Changez-le rapidement afin d'\u00e9viter tout probl\u00e8me d'acc\u00e8s \u00e0 ce service.  <br/><br/>Votre mot de passe arrivera \u00e0 expiration le %1%.
 Display_PeopleSearch=Entrez votre requ\u00eate ci-dessous. Vous pouvez rechercher une personne par son nom, son adresse \u00e9lectronique ou son num\u00e9ro de t\u00e9l\u00e9phone.
@@ -138,8 +139,8 @@ Display_RecoverTokenSendChoiceEmail=Envoyer le code \u00e0 votre adresse \u00e9l
 Display_RecoverTokenSendChoiceSMS=Envoyer le code par messagerie texte (SMS) sur votre t\u00e9l\u00e9phone mobile.
 Display_RecoverChoiceReset=D\u00e9finissez un nouveau mot de passe. Si vous avez oubli\u00e9 votre mot de passe et souhaitez en d\u00e9finir un nouveau, cliquez ici. Votre compte sera \u00e9galement d\u00e9verrouill\u00e9 lorsque vous d\u00e9finirez un nouveau mot de passe.
 Display_RecoverChoiceUnlock=D\u00e9verrouillez votre compte. Si vous vous souvenez de votre mot de passe, vous pouvez d\u00e9verrouiller votre compte en s\u00e9lectionnant cette option. Votre mot de passe ne sera pas chang\u00e9.
-Display_RecoverEnterCode=Pour que vous puissiez confirmer votre identit\u00e9, un code de s\u00e9curit\u00e9 vous a \u00e9t\u00e9 envoy\u00e9. Cliquez sur le lien figurant dans le courriel ou copiez le code de s\u00e9curit\u00e9 et collez-le ici.
-Display_RecoverEnterCodeSMS=Pour que vous puissiez confirmer votre identit\u00e9, un code de s\u00e9curit\u00e9 vous a \u00e9t\u00e9 envoy\u00e9 par SMS. Entrez ici le code de s\u00e9curit\u00e9 figurant dans ce message.
+Display_RecoverEnterCode=Pour que vous puissiez confirmer votre identit\u00e9, un code de s\u00e9curit\u00e9 vous a \u00e9t\u00e9 envoy\u00e9 \u00e0 %1%. Cliquez sur le lien figurant dans le courriel ou copiez le code de s\u00e9curit\u00e9 et collez-le ici.
+Display_RecoverEnterCodeSMS=Pour que vous puissiez confirmer votre identit\u00e9, un code de s\u00e9curit\u00e9 vous a \u00e9t\u00e9 envoy\u00e9 par SMS \u00e0\u00a0%1%. Entrez ici le code de s\u00e9curit\u00e9 figurant dans le message.
 Display_RecoverPassword=Veuillez r\u00e9pondre aux questions suivantes. Si vous y r\u00e9pondez correctement, vous pourrez r\u00e9initialiser votre mot de passe.
 Display_RecoverPasswordChoices=Votre compte a \u00e9t\u00e9 verrouill\u00e9 en raison d'un nombre excessif de tentatives de connexion incorrectes. Vous pouvez continuer en d\u00e9verrouillant votre compte ou en \u00e9ditant votre mot de passe.
 Display_RecoverRandomResponses=Vous devez r\u00e9pondre aux questions suivantes pour continuer.
@@ -147,7 +148,7 @@ Display_RecoverRequiredResponses=Ces questions sont exig\u00e9es par votre admin
 Display_RecoverOTP=Pour que vous puissiez confirmer votre identit\u00e9, utilisez votre p\u00e9riph\u00e9rique mobile pour g\u00e9n\u00e9rer votre code de s\u00e9curit\u00e9.
 Display_RecoverOTPIdentified=Pour que vous puissiez confirmer votre identit\u00e9, utilisez votre p\u00e9riph\u00e9rique mobile pour g\u00e9n\u00e9rer votre code de s\u00e9curit\u00e9. L'identifiant d'inscription de votre p\u00e9riph\u00e9rique mobile est <b>%1%</b>.
 Display_ResponsesPrompt=Veuillez entrer vos r\u00e9ponses de s\u00e9curit\u00e9
-Display_SelectionIndicator=S\u00e9lectionnez un \u00e9l\u00e9ment de question dans la liste
+Display_SelectionIndicator=S\u00e9lectionnez une question dans la liste
 Display_SearchCompleted=Recherche effectu\u00e9e.
 Display_SearchResultsInfo=%1% r\u00e9sultats renvoy\u00e9s dans %2%.
 Display_SearchResultsExceeded=Les r\u00e9sultats de recherche d\u00e9passaient la taille de recherche maximale
@@ -163,14 +164,14 @@ Display_SetupOtpSecret=Si vous oubliez votre mot de passe, vous pouvez acc\u00e9
 Display_SetupOtp_Android_Title=Android
 Display_SetupOtp_Android_Steps=<b>Installez l'application Google Authenticator pour Android.</b><ol><li>Sur votre t\u00e9l\u00e9phone, acc\u00e9dez \u00e0 Google Play Store.</li><li>Recherchez <b>Google Authenticator</b>.<br/>(<a target\="playstore" href\="https\://play.google.com/store/apps/details?id\=com.google.android.apps.authenticator2">T\u00e9l\u00e9chargez \u00e0 partir de Google Play Store</a>)</li><li>T\u00e9l\u00e9chargez et installez l'application.</li></ol><b>Ensuite, ouvrez et configurez Google Authenticator.</b><ol><li>Dans Google Authenticator, appuyez sur Menu et s\u00e9lectionnez "Set up account" (Configurer le compte)</li><li>S\u00e9lectionnez "Scan a barcode" (Lire le code \u00e0 barres).</li><li>Utilisez l'appareil photo de votre t\u00e9l\u00e9phone pour ce faire.</li><li>Une fois le code lu, cliquez sur le bouton Continue (Continuer).</li></ol>
 Display_SetupOtp_iPhone_Title=iPhone
-Display_SetupOtp_iPhone_Steps=<b>Sur votre iPhone, appuyez sur l'ic\u00f4ne App Store.</b><ol><li>Sur votre t\u00e9l\u00e9phone, acc\u00e9dez \u00e0 l'App Store.</li><li>Recherchez <b>Google Authenticator</b>.<br/>(<a target\="itunesstore" href\="https\://itunes.apple.com/us/app/google-authenticator/id388497605?mt\=8">T\u00e9l\u00e9chargez l'application \u00e0 partir de l'App Store</a>)</li><li>Appuyez sur l'application, puis appuyez sur Free (Gratuit) pour la t\u00e9l\u00e9charger et l'installer.</li></ol><b>Ensuite, ouvrez et configurez Google Authenticator.</b><ol><li>Dans Google Authenticator, appuyez sur le signe "+", puis sur "Scan Barcode" (Lire le code \u00e0 barres)</li><li>Utilisez l'appareil photo de votre t\u00e9l\u00e9phone pour ce faire.</li><li>Une fois le code lu, cliquez sur le bouton Continue (Continuer).</li></ol>
+Display_SetupOtp_iPhone_Steps=<b>Sur votre iPhone, appuyez sur l'ic\u00f4ne App Store.</b><ol><li>Sur votre t\u00e9l\u00e9phone, acc\u00e9dez \u00e0 l'App Store.</li><li>Recherchez <b>Google Authenticator</b>.<br/>(<a target\="itunesstore" href\="https\://itunes.apple.com/us/app/google-authenticator/id388497605?mt\=8">T\u00e9l\u00e9chargez l'application \u00e0 partir de l'App Store</a>)</li><li>Appuyez sur l'application, puis sur Free (Gratuit) pour la t\u00e9l\u00e9charger et l'installer.</li></ol><b>Ensuite, ouvrez et configurez Google Authenticator.</b><ol><li>Dans Google Authenticator, appuyez sur le signe "+", puis sur "Scan Barcode" (Lire le code \u00e0 barres).</li><li>Utilisez l'appareil photo de votre t\u00e9l\u00e9phone pour ce faire.</li><li>Une fois le code lu, cliquez sur le bouton Continue (Continuer).</li></ol>
 Display_SetupOtp_Other_Title=Autre
 Display_SetupOtp_Other_Steps=<b>Recherchez une application \u00e0 deux facteurs compatible.</b><ul><li>Essayez de trouver <b>Google Authenticator</b> dans l'App Store de votre p\u00e9riph\u00e9rique.<br/>De nombreux p\u00e9riph\u00e9riques ont des applications compatibles.</li><li>Essayez de trouver une application qui prend en charge les "<b>jetons de s\u00e9curit\u00e9 TOTP</b>" ou "RFC6238".</li><li>T\u00e9l\u00e9chargez et installez l'application.</li></ul><b>Ensuite, ouvrez et configurez l'application.</b><ol><li>Entrez les donn\u00e9es ci-dessous ou lisez le code en suivant les instructions de l'application.</li><li>Une fois l'application configur\u00e9e, cliquez sur le bouton Continuer.</li></ol>
 Display_TokenDestination=Destination du jeton
 Display_TokenResend=Vous devriez recevoir imm\u00e9diatement votre code de s\u00e9curit\u00e9. Si vous attendez depuis un moment et n'avez rien re\u00e7u, cliquez sur le bouton Renvoyer un code pour recevoir un nouveau code.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Vous avez d\u00e9j\u00e0 inscrit votre p\u00e9riph\u00e9rique sur <span class="timestamp">%1%</span>.  Vous pouvez tester votre p\u00e9riph\u00e9rique en tapant le code g\u00e9n\u00e9r\u00e9 ci-dessous.  Si vous continuez, vous pouvez reconfigurer votre p\u00e9riph\u00e9rique actuel.
+Display_WarnExistingOtpSecretTime=Vous avez d\u00e9j\u00e0 inscrit votre p\u00e9riph\u00e9rique sur <span class\="timestamp">%1%</span>.  Vous pouvez tester votre p\u00e9riph\u00e9rique en tapant le code g\u00e9n\u00e9r\u00e9 ci-dessous.  Si vous continuez, vous pouvez reconfigurer votre p\u00e9riph\u00e9rique actuel.
 Display_WarnExistingOtpSecret=Vous avez d\u00e9j\u00e0 inscrit votre p\u00e9riph\u00e9rique. Vous pouvez tester votre p\u00e9riph\u00e9rique actuel en tapant le code g\u00e9n\u00e9r\u00e9 ci-dessous. Si vous continuez, vous pouvez reconfigurer votre p\u00e9riph\u00e9rique actuel.
 Display_WarnExistingResponseTime=Vous avez d\u00e9j\u00e0 configur\u00e9 vos questions et r\u00e9ponses de v\u00e9rification d'identit\u00e9 le  <span class\="timestamp">%1%</span>. Si vous continuez, vous pouvez de nouveau r\u00e9pondre \u00e0 vos questions.
 Display_WarnExistingResponse=Vous avez d\u00e9j\u00e0 configur\u00e9 vos questions et r\u00e9ponses de v\u00e9rification d'identit\u00e9. Si vous continuez, vous pouvez de nouveau r\u00e9pondre \u00e0 vos questions.
@@ -295,6 +296,8 @@ Title_PasswordPolicy=Strat\u00e9gie de mot de passe
 Title_PasswordStrength=Force du mot de passe
 Title_PasswordWarning=Avertissement concernant le mot de passe
 Title_PeopleSearch=Recherche de personnes
+Title_PeopleSearchCard=Cartes de recherche de personnes
+Title_PeopleSearchTable=Table de recherche de personnes
 Title_PleaseWait=Veuillez patienter
 Title_RandomPasswords=Mots de passe al\u00e9atoires
 Title_RecentVerifications=V\u00e9rifications r\u00e9centes
