--- a/server/src/main/resources/password/pwm/i18n/Display_it.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_it.properties
@@ -1,3 +1,4 @@
+#Thu, 10 Aug 2017 01:24:26 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -138,8 +139,8 @@ Display_RecoverTokenSendChoiceEmail=Inviare il codice all'indirizzo e-mail dell'
 Display_RecoverTokenSendChoiceSMS=Inviare il codice al numero di cellulare dell'utente utilizzando un SMS.
 Display_RecoverChoiceReset=Impostare una nuova password. Se non si ricorda la password e si desidera impostarne una nuova, fare clic qui. Impostando una nuova password verr\u00e0 sbloccato anche l'account dell'utente.
 Display_RecoverChoiceUnlock=Sbloccare l'account. Se si ricorda la password, \u00e8 possibile sbloccare l'account selezionando questa opzione. La password non verr\u00e0 modificata.
-Display_RecoverEnterCode=All'utente \u00e8 stato inviato un codice di sicurezza per verificarne l'identit\u00e0. Fare clic sul collegamento riportato nell'e-mail o copiare e incollare qui il codice di sicurezza.
-Display_RecoverEnterCodeSMS=All'utente \u00e8 stato inviato un codice di sicurezza via SMS per verificarne l'identit\u00e0. Immettere qui il codice di sicurezza del messaggio.
+Display_RecoverEnterCode=All'utente \u00e8 stato inviato un codice di sicurezza all'indirizzo %1% per verificarne l'identit\u00e0. Fare clic sul collegamento riportato nell'e-mail o copiare e incollare qui il codice di sicurezza.
+Display_RecoverEnterCodeSMS=All'utente \u00e8 stato inviato un codice di sicurezza via SMS al numero %1% per verificarne l'identit\u00e0. Immettere qui il codice di sicurezza del messaggio.
 Display_RecoverPassword=Rispondere alle domande seguenti. Rispondendo correttamente alle domande \u00e8 possibile reimpostare la password.
 Display_RecoverPasswordChoices=L'account \u00e8 stato bloccato a causa di un numero eccessivo di tentativi di login errati. Per continuare \u00e8 possibile sbloccare l'account o modificare la password.
 Display_RecoverRandomResponses=Per continuare \u00e8 necessario rispondere alle seguenti domande.
@@ -170,7 +171,7 @@ Display_TokenDestination=Destinazione token
 Display_TokenResend=Il codice di sicurezza dovrebbe arrivare immediatamente. Se dopo aver atteso il codice non \u00e8 stato ricevuto, fare clic sul pulsante Reinvia codice per ricevere un nuovo codice.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Il dispositivo \u00e8 gi\u00e0 stato registrato su <span class="timestamp">%1%</span>. Per eseguire una prova del dispositivo attuale, digitare di seguito il codice generato. Continuando \u00e8 possibile riconfigurare il dispositivo attuale.
+Display_WarnExistingOtpSecretTime=Il dispositivo \u00e8 gi\u00e0 stato registrato su <span class\="timestamp">%1%</span>. Per eseguire una prova del dispositivo attuale, digitare di seguito il codice generato. Continuando \u00e8 possibile riconfigurare il dispositivo attuale.
 Display_WarnExistingOtpSecret=Il dispositivo \u00e8 gi\u00e0 stato registrato. Per eseguire una prova del dispositivo attuale, digitare di seguito il codice generato. Continuando \u00e8 possibile riconfigurare il dispositivo attuale.
 Display_WarnExistingResponseTime=Le domande/risposte di autenticazione sono gi\u00e0 state impostate il <span class\="timestamp">%1%</span>. Continuando \u00e8 possibile rispondere nuovamente alle domande.
 Display_WarnExistingResponse=Le domande/risposte di autenticazione sono gi\u00e0 state impostate. Continuando \u00e8 possibile rispondere nuovamente alle domande.
@@ -295,6 +296,8 @@ Title_PasswordPolicy=Policy password
 Title_PasswordStrength=Complessit\u00e0 password
 Title_PasswordWarning=Avviso password
 Title_PeopleSearch=Ricerca persone
+Title_PeopleSearchCard=Schede ricerca persone
+Title_PeopleSearchTable=Tabella ricerca persone
 Title_PleaseWait=Attendere
 Title_RandomPasswords=Password casuali
 Title_RecentVerifications=Verifiche recenti
