--- a/server/src/main/resources/password/pwm/i18n/Display_nl.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_nl.properties
@@ -1,3 +1,4 @@
+#Thu, 10 Aug 2017 01:24:26 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -97,7 +98,6 @@ Display_HelpdeskOtpValidation=Instrueer de gebruiker zijn mobiele verificatie-ap
 Display_Hour=uur
 Display_Hours=uur
 Display_IdleTimeout=Time-out na inactiviteit\:
-
 Display_IdleWarningMessage=Uw sessie staat op het punt een time-out te krijgen. Klik op een willekeurige plaats op deze pagina om de sessie te hervatten.
 Display_IdleWarningTitle=Time-out na inactiviteit
 Display_JavascriptRequired=Javascript is vereist om deze pagina weer te geven.
@@ -134,14 +134,14 @@ Display_PleaseWait=Laden...
 Display_PleaseWaitNewUser=Uw nieuwe account wordt geconfigureerd. Dit proces kan enkele minuten duren. Een ogenblik geduld.
 Display_PleaseWaitPassword=Uw wachtwoord wordt gewijzigd. Dit proces kan enkele minuten duren. Een ogenblik geduld.
 Display_Random=Willekeurig
-Display_RecoverVerificationChoice=Selecteer een van de volgende methoden om uw identiteit te verifi\u00ebren.  Opmerking\: als uw beheerder meerdere verificatiemethoden vereist, wordt u teruggestuurd naar deze pagina totdat aan alle verificatiecriteria is voldaan.
+Display_RecoverVerificationChoice=Selecteer een van de hierna genoemde methoden om uw identiteit te verifi\u00ebren. Opmerking\: als uw beheerder meerdere vormen van verificatie vereist, wordt u opnieuw naar deze pagina doorgestuurd totdat u aan alle verificatiecriteria hebt voldaan.
 Display_RecoverTokenSendChoices=Als u uw identiteit wilt verifi\u00ebren, wordt een beveiligingscode naar u verzonden. Geef aan op welke manier u uw beveiligingscode wilt ontvangen.
 Display_RecoverTokenSendChoiceEmail=Verzend de code naar uw geregistreerde e-mailadres.
 Display_RecoverTokenSendChoiceSMS=Verzend de code naar uw mobiele telefoon met tekstberichten (sms).
 Display_RecoverChoiceReset=Stel een nieuw wachtwoord in. Als u uw wachtwoord bent vergeten en een nieuw wachtwoord wilt instellen, klikt u hier. Uw account wordt ook ontgrendeld als u een nieuw wachtwoord instelt.
 Display_RecoverChoiceUnlock=Ontgrendel uw account. Als u uw wachtwoord weet, kunt u uw account ontgrendelen door deze optie te selecteren. Uw wachtwoord wordt dan niet gewijzigd.
-Display_RecoverEnterCode=Ter controle van uw identiteit is er een beveiligingscode naar u verzonden. Klik op de koppeling in de e-mail of kopieer en plak de beveiligingscode hier.
-Display_RecoverEnterCodeSMS=Ter controle van uw identiteit is er per sms een beveiligingscode naar u verzonden. Voer hier de beveiligingscode uit het bericht in.
+Display_RecoverEnterCode=Ter controle van uw identiteit is er een beveiligingscode naar u verzonden op %1% beveiliging. Klik op de koppeling in de e-mail of kopieer en plak de beveiligingscode hier.
+Display_RecoverEnterCodeSMS=Ter controle van uw identiteit is er een beveiligingscode naar uw telefoon verzonden op %1%. Voer hier de beveiligingscode uit het bericht in.
 Display_RecoverPassword=Beantwoord de volgende vragen. Als u deze vragen correct beantwoordt, kunt u uw wachtwoord opnieuw instellen.
 Display_RecoverPasswordChoices=Uw account is vergrendeld vanwege te veel onjuiste aanmeldingspogingen. U kunt verdergaan door uw account te ontgrendelen of door uw wachtwoord te wijzigen.
 Display_RecoverRandomResponses=U moet de volgende vragen beantwoorden om door te gaan.
@@ -174,7 +174,7 @@ Display_TokenDestination=Tokenbestemming
 Display_TokenResend=U moet uw beveiligingscode meteen ontvangen. Als u na enige tijd nog geen code hebt ontvangen, klikt u op de knop Opnieuw verzenden om een nieuwe code te ontvangen.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=U hebt uw apparaat al ingeschreven op <span class="timestamp">%1%</span>. U kunt uw huidige apparaat testen door de gegenereerde code hieronder te typen. Als u doorgaat, kunt u uw huidige apparaat opnieuw configureren.
+Display_WarnExistingOtpSecretTime=U hebt uw apparaat al ingeschreven op <span class\="timestamp">%1%</span>. U kunt uw huidige apparaat testen door de gegenereerde code hieronder te typen. Als u doorgaat, kunt u uw huidige apparaat opnieuw configureren.
 Display_WarnExistingOtpSecret=U hebt uw apparaat al ingeschreven. U kunt uw huidige apparaat testen door de gegenereerde code hieronder te typen. Als u doorgaat, kunt u uw huidige apparaat configureren.
 Display_WarnExistingResponseTime=U hebt uw challenge/response-antwoorden al ingesteld op <span class\="timestamp">%1%</span>. Als u doorgaat, kunt u uw vragen opnieuw beantwoorden.
 Display_WarnExistingResponse=U hebt uw challenge/response-antwoorden al ingesteld. Als u doorgaat, kunt u uw vragen opnieuw beantwoorden.
@@ -299,6 +299,8 @@ Title_PasswordPolicy=Wachtwoordbeleid
 Title_PasswordStrength=Wachtwoordsterkte
 Title_PasswordWarning=Wachtwoordwaarschuwing
 Title_PeopleSearch=Personen zoeken
+Title_PeopleSearchCard=Zoekkaarten voor personen
+Title_PeopleSearchTable=Zoektabel voor personen
 Title_PleaseWait=Een ogenblik geduld
 Title_RandomPasswords=Willekeurige wachtwoorden
 Title_RecentVerifications=Recente verificaties
