--- a/server/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
@@ -1,3 +1,4 @@
+#Thu, 10 Aug 2017 01:24:26 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -138,8 +139,8 @@ Display_RecoverTokenSendChoiceEmail=Enviar o c\u00f3digo para seu endere\u00e7o 
 Display_RecoverTokenSendChoiceSMS=Enviar o c\u00f3digo para seu telefone celular usando mensagem de texto (SMS).
 Display_RecoverChoiceReset=Defina uma nova senha. Se tiver esquecido a senha e desejar definir uma nova, clique aqui. A conta tamb\u00e9m ser\u00e1 desbloqueada quando voc\u00ea definir uma nova senha.
 Display_RecoverChoiceUnlock=Desbloqueie a sua conta. Se voc\u00ea lembrar a senha, poder\u00e1 desbloquear a conta selecionando esta op\u00e7\u00e3o. Sua senha n\u00e3o ser\u00e1 mudada.
-Display_RecoverEnterCode=Para verificar sua identidade, um c\u00f3digo de seguran\u00e7a foi enviado a voc\u00ea. Clique no link no e-mail ou copie e cole o c\u00f3digo de seguran\u00e7a aqui.
-Display_RecoverEnterCodeSMS=Para verificar sua identidade, um c\u00f3digo de seguran\u00e7a foi enviado a voc\u00ea por SMS. Digite esse c\u00f3digo de seguran\u00e7a aqui.
+Display_RecoverEnterCode=Para verificar sua identidade, um c\u00f3digo de seguran\u00e7a foi enviado a voc\u00ea em %1%. Clique no link no e-mail ou copie e cole o c\u00f3digo de seguran\u00e7a aqui.
+Display_RecoverEnterCodeSMS=Para verificar sua identidade, um c\u00f3digo de seguran\u00e7a foi enviado ao seu telefone em %1%. Digite esse c\u00f3digo de seguran\u00e7a da mensagem aqui.
 Display_RecoverPassword=Responda \u00e0s perguntas a seguir. Se respond\u00ea-las corretamente, poder\u00e1 redefinir sua senha.
 Display_RecoverPasswordChoices=Sua conta foi bloqueada devido a tentativas de login incorretas em excesso. Para continuar, desbloqueie a conta ou mude a senha.
 Display_RecoverRandomResponses=Voc\u00ea deve responder \u00e0s perguntas a seguir para continuar.
@@ -170,7 +171,7 @@ Display_TokenDestination=Destino do Token
 Display_TokenResend=Seu c\u00f3digo de seguran\u00e7a deve chegar imediatamente. Se tiver aguardado por um longo tempo e ainda n\u00e3o tiver recebido um c\u00f3digo, clique no bot\u00e3o de reenviar c\u00f3digo para receber um novo c\u00f3digo.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Voc\u00ea j\u00e1 registrou seu dispositivo em <span class="timestamp">%1%</span>. \u00c9 poss\u00edvel testar o dispositivo atual digitando o c\u00f3digo gerado abaixo. Se voc\u00ea continuar, poder\u00e1 reconfigurar o dispositivo atual.
+Display_WarnExistingOtpSecretTime=Voc\u00ea j\u00e1 registrou seu dispositivo em <span class\="timestamp">%1%</span>. \u00c9 poss\u00edvel testar o dispositivo atual digitando o c\u00f3digo gerado abaixo. Se voc\u00ea continuar, poder\u00e1 reconfigurar o dispositivo atual.
 Display_WarnExistingOtpSecret=Voc\u00ea j\u00e1 inscreveu seu dispositivo.  \u00c9 poss\u00edvel testar o dispositivo atual digitando o c\u00f3digo gerado abaixo. Se continuar, ser\u00e1 poss\u00edvel reconfigurar o dispositivo atual.
 Display_WarnExistingResponseTime=Voc\u00ea j\u00e1 configurou as respostas para a pergunta/resposta de verifica\u00e7\u00e3o em <span class\="timestamp">%1%</span>. Se continuar, voc\u00ea poder\u00e1 responder \u00e0s perguntas novamente.
 Display_WarnExistingResponse=Voc\u00ea j\u00e1 configurou as respostas para a pergunta/resposta de verifica\u00e7\u00e3o. Se continuar, ser\u00e1 poss\u00edvel responder \u00e0s perguntas novamente.
@@ -295,6 +296,8 @@ Title_PasswordPolicy=Pol\u00edtica de Senha
 Title_PasswordStrength=For\u00e7a da Senha
 Title_PasswordWarning=Aviso de Senha
 Title_PeopleSearch=Pesquisa de Pessoas
+Title_PeopleSearchCard=Cart\u00f5es de Pesquisa de Pessoas
+Title_PeopleSearchTable=Tabela de Pesquisa de Pessoas
 Title_PleaseWait=Aguarde
 Title_RandomPasswords=Senhas Aleat\u00f3rias
 Title_RecentVerifications=Verifica\u00e7\u00f5es Recentes
