--- a/server/src/main/resources/password/pwm/i18n/Display_sv.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_sv.properties
@@ -1,3 +1,4 @@
+#Thu, 10 Aug 2017 01:24:26 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -132,14 +133,14 @@ Display_PleaseWait=L\u00e4ser ...
 Display_PleaseWaitNewUser=Ditt nya konto konfigureras. Detta kan ta flera minuter. V\u00e4nta.
 Display_PleaseWaitPassword=Ditt l\u00f6senord \u00e4ndras. Detta kan ta flera minuter. V\u00e4nta.
 Display_Random=Slumpm\u00e4ssigt
-Display_RecoverVerificationChoice=V\u00e4lj n\u00e5gon av f\u00f6ljande metoder f\u00f6r att verifiera din identitet. Obs! Om administrat\u00f6ren kr\u00e4ver flera former av verifiering omdirigeras du tillbaka till den h\u00e4r sidan tills alla verifieringskriterier uppfyllts.
+Display_RecoverVerificationChoice=V\u00e4lj en av f\u00f6ljande metoder f\u00f6r att verifiera din identitet. Obs! Om administrat\u00f6ren kr\u00e4ver flera former av verifiering dirigeras du tillbaka till den h\u00e4r sidan tills det att samtliga verifieringskriterier \u00e4r uppfyllda.
 Display_RecoverTokenSendChoices=F\u00f6r att verifiera din identitet skickas en s\u00e4kerhetskod till dig. Ange med vilken metod du helst vill ta emot s\u00e4kerhetskoden.
 Display_RecoverTokenSendChoiceEmail=Skicka koden till din registrerade e-postadress.
 Display_RecoverTokenSendChoiceSMS=Skicka koden till din mobil som textmeddelande (SMS).
 Display_RecoverChoiceReset=Ange ett nytt l\u00f6senord. Om du har gl\u00f6mt bort ditt l\u00f6senord och vill ange ett nytt klickar du h\u00e4r. Ditt konto kommer ocks\u00e5 att l\u00e5sas upp n\u00e4r du anger ett nytt l\u00f6senord.
 Display_RecoverChoiceUnlock=L\u00e5s upp ditt konto. Om du kommer ih\u00e5g l\u00f6senordet kan du l\u00e5sa upp kontot med det h\u00e4r alternativet. Ditt l\u00f6senord \u00e4ndras inte.
-Display_RecoverEnterCode=F\u00f6r att verifiera din identitet har en s\u00e4kerhetskod skickats till dig. Klicka p\u00e5 l\u00e4nken i e-postmeddelandet eller kopiera och klistra in s\u00e4kerhetskoden h\u00e4r.
-Display_RecoverEnterCodeSMS=F\u00f6r att verifiera din identitet har en s\u00e4kerhetskod skickats till dig med SMS. Ange s\u00e4kerhetskoden i meddelandet h\u00e4r.
+Display_RecoverEnterCode=F\u00f6r att verifiera din identitet har en s\u00e4kerhetskod skickats till dig p\u00e5 %1%. Klicka p\u00e5 l\u00e4nken i e-postmeddelandet eller kopiera och klistra in s\u00e4kerhetskoden h\u00e4r.
+Display_RecoverEnterCodeSMS=F\u00f6r att verifiera din identitet har en s\u00e4kerhetskod skickats till din telefon p\u00e5 %1%. Ange s\u00e4kerhetskoden i meddelandet h\u00e4r.
 Display_RecoverPassword=Svara p\u00e5 f\u00f6ljande fr\u00e5gor. Om du svarar r\u00e4tt kommer du att kunna \u00e5terst\u00e4lla ditt l\u00f6senord.
 Display_RecoverPasswordChoices=Ditt konto har l\u00e5sts p\u00e5 grund av f\u00f6r m\u00e5nga felaktiga inloggningsf\u00f6rs\u00f6k. Du kan forts\u00e4tta genom att l\u00e5sa upp ditt konto eller genom att \u00e4ndra ditt l\u00f6senord.
 Display_RecoverRandomResponses=Du m\u00e5ste svara p\u00e5 f\u00f6ljande fr\u00e5gor f\u00f6r att forts\u00e4tta.
@@ -170,7 +171,7 @@ Display_TokenDestination=Tokenm\u00e5l
 Display_TokenResend=Din s\u00e4kerhetskod b\u00f6r komma direkt. Klicka p\u00e5 knappen Skicka kod p\u00e5 nytt f\u00f6r att f\u00e5 en ny kod om du har v\u00e4ntat en stund och fortfarande inte f\u00e5tt den.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Du har redan registrerat din enhet. Detta gjorde du den <span class="timestamp">%1%</span>. Du kan testa din aktuella enhet genom att skriva in koden som genererats nedan. Om du forts\u00e4tter kan du konfigurera om din aktuella enhet.
+Display_WarnExistingOtpSecretTime=Du har redan registrerat din enhet. Detta gjorde du den <span class\="timestamp">%1%</span>. Du kan testa din aktuella enhet genom att skriva in koden som genererats nedan. Om du forts\u00e4tter kan du konfigurera om din aktuella enhet.
 Display_WarnExistingOtpSecret=Du har redan registrerat din enhet. Du kan testa din nuvarande enhet genom att skriva den genererade koden nedan. Om du forts\u00e4tter kan du konfigurera om din nuvarande enhet.
 Display_WarnExistingResponseTime=Du har redan st\u00e4llt in dina kontrollfr\u00e5gor och svar <span class\="timestamp">%1%</span>. Om du forts\u00e4tter kan du ange nya svar p\u00e5 fr\u00e5gorna.
 Display_WarnExistingResponse=Du har redan st\u00e4llt in dina kontrollfr\u00e5gor och svar. Om du forts\u00e4tter kan du ange nya svar p\u00e5 fr\u00e5gorna.
@@ -295,6 +296,8 @@ Title_PasswordPolicy=L\u00f6senordspolicy
 Title_PasswordStrength=L\u00f6senordets styrka
 Title_PasswordWarning=L\u00f6senordsvarning
 Title_PeopleSearch=S\u00f6k efter personer
+Title_PeopleSearchCard=S\u00f6k efter personer-kort
+Title_PeopleSearchTable=S\u00f6k efter personer-tabell
 Title_PleaseWait=V\u00e4nta
 Title_RandomPasswords=Slumpm\u00e4ssiga l\u00f6senord
 Title_RecentVerifications=Senaste verifieringar
