--- a/server/src/main/resources/password/pwm/i18n/Display_zh_CN.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_zh_CN.properties
@@ -1,3 +1,4 @@
+#Thu, 10 Aug 2017 01:24:26 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -138,8 +139,8 @@ Display_RecoverTokenSendChoiceEmail=\u5c06\u4ee3\u7801\u53d1\u9001\u5230\u60a8\u
 Display_RecoverTokenSendChoiceSMS=\u4f7f\u7528\u77ed\u4fe1 (SMS) \u5c06\u4ee3\u7801\u53d1\u9001\u5230\u60a8\u7684\u79fb\u52a8\u7535\u8bdd\u3002
 Display_RecoverChoiceReset=\u8bbe\u7f6e\u65b0\u53e3\u4ee4\u3002\u5982\u679c\u60a8\u5fd8\u8bb0\u4e86\u53e3\u4ee4\u5e76\u4e14\u60f3\u8981\u8bbe\u7f6e\u4e00\u4e2a\u65b0\u7684\uff0c\u8bf7\u5355\u51fb\u6b64\u5904\u3002\u8bbe\u7f6e\u65b0\u53e3\u4ee4\u540e\uff0c\u60a8\u7684\u5e10\u6237\u4e5f\u4f1a\u89e3\u9664\u9501\u5b9a\u3002
 Display_RecoverChoiceUnlock=\u89e3\u9664\u9501\u5b9a\u5e10\u6237\u3002\u5982\u679c\u60a8\u8fd8\u8bb0\u5f97\u53e3\u4ee4\uff0c\u9009\u62e9\u6b64\u9009\u9879\u5373\u53ef\u89e3\u9664\u9501\u5b9a\u5e10\u6237\u3002\u60a8\u7684\u53e3\u4ee4\u5c06\u4e0d\u4f1a\u66f4\u6539\u3002
-Display_RecoverEnterCode=\u4e3a\u4e86\u6821\u9a8c\u60a8\u7684\u8eab\u4efd\uff0c\u7cfb\u7edf\u5df2\u5c06\u5b89\u5168\u4ee3\u7801\u53d1\u9001\u7ed9\u60a8\u3002\u8bf7\u5355\u51fb\u7535\u5b50\u90ae\u4ef6\u4e2d\u7684\u94fe\u63a5\uff0c\u6216\u8005\u5c06\u5b89\u5168\u4ee3\u7801\u590d\u5236\u548c\u7c98\u8d34\u5230\u6b64\u5904\u3002
-Display_RecoverEnterCodeSMS=\u4e3a\u4e86\u6821\u9a8c\u60a8\u7684\u8eab\u4efd\uff0c\u7cfb\u7edf\u5df2\u901a\u8fc7\u77ed\u4fe1\u5c06\u5b89\u5168\u4ee3\u7801\u53d1\u9001\u7ed9\u60a8\u3002\u8bf7\u5728\u6b64\u5904\u8f93\u5165\u77ed\u4fe1\u4e2d\u7684\u5b89\u5168\u4ee3\u7801\u3002
+Display_RecoverEnterCode=\u4e3a\u4e86\u6821\u9a8c\u60a8\u7684\u8eab\u4efd\uff0c\u7cfb\u7edf\u5df2\u5c06\u5b89\u5168\u4ee3\u7801\u53d1\u9001\u81f3 %1%\u3002\u8bf7\u5355\u51fb\u7535\u5b50\u90ae\u4ef6\u4e2d\u7684\u94fe\u63a5\uff0c\u6216\u8005\u5c06\u5b89\u5168\u4ee3\u7801\u590d\u5236\u7c98\u8d34\u5230\u6b64\u5904\u3002
+Display_RecoverEnterCodeSMS=\u4e3a\u4e86\u6821\u9a8c\u60a8\u7684\u8eab\u4efd\uff0c\u7cfb\u7edf\u5df2\u5c06\u5b89\u5168\u4ee3\u7801\u4ee5\u77ed\u4fe1\u7684\u5f62\u5f0f\u53d1\u9001\u81f3\u60a8\u7684\u624b\u673a %1%\u3002\u8bf7\u5728\u6b64\u5904\u8f93\u5165\u77ed\u4fe1\u4e2d\u7684\u5b89\u5168\u4ee3\u7801\u3002
 Display_RecoverPassword=\u8bf7\u56de\u7b54\u4e0b\u5217\u95ee\u9898\u3002\u5982\u679c\u6b63\u786e\u5730\u56de\u7b54\u4e86\u8fd9\u4e9b\u95ee\u9898\uff0c\u60a8\u5c31\u53ef\u4ee5\u91cd\u8bbe\u7f6e\u60a8\u7684\u53e3\u4ee4\u3002
 Display_RecoverPasswordChoices=\u7531\u4e8e\u4e0d\u6b63\u786e\u7684\u767b\u5f55\u5c1d\u8bd5\u6b21\u6570\u8fc7\u591a\uff0c\u60a8\u7684\u5e10\u6237\u5df2\u88ab\u9501\u5b9a\u3002\u5728\u89e3\u9664\u9501\u5b9a\u5e10\u6237\u6216\u66f4\u6539\u53e3\u4ee4\u4ee5\u540e\uff0c\u60a8\u53ef\u4ee5\u7ee7\u7eed\u3002
 Display_RecoverRandomResponses=\u5fc5\u987b\u56de\u7b54\u4ee5\u4e0b\u95ee\u9898\u624d\u80fd\u7ee7\u7eed\u3002
@@ -170,7 +171,7 @@ Display_TokenDestination=\u4ee4\u724c\u76ee\u6807
 Display_TokenResend=\u60a8\u5c06\u7acb\u5373\u6536\u5230\u5b89\u5168\u4ee3\u7801\u3002\u5982\u679c\u957f\u65f6\u95f4\u672a\u6536\u5230\uff0c\u53ef\u5355\u51fb\u91cd\u53d1\u9001\u4ee3\u7801\u6309\u94ae\u4ee5\u63a5\u6536\u65b0\u4ee3\u7801\u3002
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=\u60a8\u5df2\u5728 <span class="timestamp">%1%</span> \u4e2d\u6ce8\u518c\u8bbe\u5907\u3002\u60a8\u53ef\u901a\u8fc7\u5728\u4e0b\u65b9\u952e\u5165\u751f\u6210\u7684\u4ee3\u7801\u4ee5\u6d4b\u8bd5\u5f53\u524d\u8bbe\u5907\u3002\u5982\u679c\u9009\u62e9\u7ee7\u7eed\uff0c\u53ef\u4ee5\u91cd\u914d\u7f6e\u60a8\u7684\u5f53\u524d\u8bbe\u5907\u3002
+Display_WarnExistingOtpSecretTime=\u60a8\u5df2\u5728 <span class\="timestamp">%1%</span> \u4e2d\u6ce8\u518c\u8bbe\u5907\u3002\u60a8\u53ef\u901a\u8fc7\u5728\u4e0b\u65b9\u952e\u5165\u751f\u6210\u7684\u4ee3\u7801\u4ee5\u6d4b\u8bd5\u5f53\u524d\u8bbe\u5907\u3002\u5982\u679c\u9009\u62e9\u7ee7\u7eed\uff0c\u53ef\u4ee5\u91cd\u914d\u7f6e\u60a8\u7684\u5f53\u524d\u8bbe\u5907\u3002
 Display_WarnExistingOtpSecret=\u60a8\u5df2\u6ce8\u518c\u4e86\u8bbe\u5907\u3002\u60a8\u53ef\u4ee5\u901a\u8fc7\u5728\u4e0b\u9762\u952e\u5165\u751f\u6210\u7684\u4ee3\u7801\u6765\u6d4b\u8bd5\u5f53\u524d\u8bbe\u5907\u3002\u5982\u679c\u7ee7\u7eed\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u914d\u7f6e\u5f53\u524d\u8bbe\u5907\u3002
 Display_WarnExistingResponseTime=\u60a8\u5df2\u5728 <span class\="timestamp">%1%</span> \u8bbe\u7f6e\u8be2\u95ee/\u56de\u7b54\u7b54\u6848\u3002\u5982\u679c\u7ee7\u7eed\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u56de\u7b54\u76f8\u5173\u95ee\u9898\u3002
 Display_WarnExistingResponse=\u60a8\u5df2\u8bbe\u7f6e\u8be2\u95ee/\u56de\u7b54\u7b54\u6848\u3002\u5982\u679c\u7ee7\u7eed\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u56de\u7b54\u76f8\u5173\u95ee\u9898\u3002
@@ -295,6 +296,8 @@ Title_PasswordPolicy=\u53e3\u4ee4\u7b56\u7565
 Title_PasswordStrength=\u53e3\u4ee4\u5f3a\u5ea6
 Title_PasswordWarning=\u53e3\u4ee4\u8b66\u544a
 Title_PeopleSearch=\u4eba\u7269\u641c\u7d22
+Title_PeopleSearchCard=\u4eba\u7269\u641c\u7d22\u5361
+Title_PeopleSearchTable=\u4eba\u7269\u641c\u7d22\u8868
 Title_PleaseWait=\u8bf7\u7a0d\u5019
 Title_RandomPasswords=\u968f\u673a\u53e3\u4ee4
 Title_RecentVerifications=\u6700\u8fd1\u6821\u9a8c
