--- a/server/src/main/resources/password/pwm/i18n/Message_fr_CA.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_fr_CA.properties
@@ -66,25 +66,25 @@ Requirement_FirstNumeric=Le premier caract\u00e8re ne peut pas \u00eatre num\u00
 Requirement_FirstSpecial=Le premier caract\u00e8re ne peut pas \u00eatre un symbole (ni alphab\u00e9tique ni num\u00e9rique).
 Requirement_LastNumeric=Le dernier caract\u00e8re ne peut pas \u00eatre num\u00e9rique.
 Requirement_LastSpecial=Le dernier caract\u00e8re ne peut pas \u00eatre un symbole (ni alphab\u00e9tique ni num\u00e9rique).
-Requirement_MaxAlpha=Ne peut pas contenir plus de %1% lettre.
-Requirement_MaxAlphaPlural=Ne peut pas contenir plus de %1% lettres.
+Requirement_MaxAlpha=Ne doit pas inclure plus de %1% lettre.
+Requirement_MaxAlphaPlural=Ne doit pas inclure plus de %1% lettres.
 Requirement_MaxLength=Ne doit pas comporter plus de %1% caract\u00e8re.
 Requirement_MaxLengthPlural=Ne doit pas comporter plus de %1% caract\u00e8res.
-Requirement_MaxLower=Ne peut pas contenir plus de %1% lettre minuscule.
-Requirement_MaxLowerPlural=Ne peut pas contenir plus de %1% lettres minuscules.
-Requirement_MaxNumeric=Ne peut pas contenir plus de %1% chiffre.
-Requirement_MaxNumericPlural=Ne peut pas contenir plus de %1% chiffres.
+Requirement_MaxLower=Ne doit pas inclure plus de %1% lettre minuscule.
+Requirement_MaxLowerPlural=Ne doit pas inclure plus de %1% lettres minuscules.
+Requirement_MaxNumeric=Ne doit pas inclure plus de %1% chiffre.
+Requirement_MaxNumericPlural=Ne doit pas inclure plus de %1% chiffres.
 Requirement_MaxRepeat=Ne doit pas r\u00e9p\u00e9ter le m\u00eame caract\u00e8re plus de %1% fois.
 Requirement_MaxRepeatPlural=Ne doit pas r\u00e9p\u00e9ter le m\u00eame caract\u00e8re plus de %1% fois.
 Requirement_MaxSeqRepeat=Ne doit pas r\u00e9p\u00e9ter le m\u00eame caract\u00e8re successivement plus de %1% fois.
 Requirement_MaxSeqRepeatPlural=Ne doit pas r\u00e9p\u00e9ter le m\u00eame caract\u00e8re successivement plus de %1% fois.
-Requirement_MaxSpecial=Ne peut pas comporter plus de %1% symbole (ni alphab\u00e9tique ni num\u00e9rique).
-Requirement_MaxSpecialPlural=Ne peut pas comporter plus de %1% symboles (ni alphab\u00e9tiques ni num\u00e9riques).
-Requirement_MaxUpper=Ne peut pas contenir plus de %1% lettre majuscule.
-Requirement_MaxUpperPlural=Ne peut pas contenir plus de %1% lettres majuscules.
+Requirement_MaxSpecial=Ne doit pas inclure plus de %1% symbole (ni alphab\u00e9tiques ni num\u00e9riques).
+Requirement_MaxSpecialPlural=Ne doit pas inclure plus de %1% symboles (ni alphab\u00e9tiques ni num\u00e9riques).
+Requirement_MaxUpper=Ne doit pas inclure plus de %1% lettre majuscule.
+Requirement_MaxUpperPlural=Ne doit pas inclure plus de %1% lettres majuscules.
 Requirement_MinAlpha=Doit comporter au moins %1% lettre.
 Requirement_MinAlphaPlural=Doit comporter au moins %1% lettres.
-Requirement_MinimumFrequency=Ne peut pas \u00eatre \u00e9dit\u00e9 \u00e0 une fr\u00e9quence sup\u00e9rieure \u00e0 une fois chaque/tou(te)s les %1%.
+Requirement_MinimumFrequency=Ne doit pas \u00eatre \u00e9dit\u00e9 \u00e0 une fr\u00e9quence sup\u00e9rieure \u00e0 une fois chaque/toutes les %1%.
 Requirement_MinLength=Doit comporter au moins %1% caract\u00e8re.
 Requirement_MinLengthPlural=Doit comporter au moins %1% caract\u00e8res.
 Requirement_MinLower=Doit comporter au moins %1% lettre minuscule.
@@ -98,8 +98,8 @@ Requirement_MinUniquePlural=Doit comporter au moins %1% caract\u00e8res uniques.
 Requirement_MinUpper=Doit comporter au moins %1% lettre majuscule.
 Requirement_MinUpperPlural=Doit comporter au moins %1% lettres majuscules.
 Requirement_NotCaseSensitive=Le mot de passe n'est pas sensible \u00e0 la casse.
-Requirement_OldChar=Ne peut pas comporter plus de %1% caract\u00e8re de votre mot de passe actuel.
-Requirement_OldCharPlural=Ne peut pas comporter plus de %1% caract\u00e8res de votre mot de passe actuel.
+Requirement_OldChar=Ne doit pas comporter plus de %1% caract\u00e8re de votre mot de passe actuel.
+Requirement_OldCharPlural=Ne doit pas comporter plus de %1% caract\u00e8res de votre mot de passe actuel.
 Requirement_RequiredChars=Doit comporter au moins un caract\u00e8re de chacune des cat\u00e9gories suivantes :
 Requirement_UniqueRequired=Le nouveau mot de passe ne doit pas avoir \u00e9t\u00e9 utilis\u00e9 par le pass\u00e9.
 Requirement_WordList=Ne doit pas comporter de mot courant ou de s\u00e9quence de caract\u00e8res couramment utilis\u00e9e.
