--- a/server/src/main/resources/password/pwm/i18n/Display_pl.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_pl.properties
@@ -1,3 +1,4 @@
+#Thu, 10 Aug 2017 01:24:26 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -138,8 +139,8 @@ Display_RecoverTokenSendChoiceEmail=Wy\u015blij kod na zarejestrowane adresy e-m
 Display_RecoverTokenSendChoiceSMS=Wy\u015blij kod na telefon kom\u00f3rkowy przy u\u017cyciu wiadomo\u015bci tekstowej (SMS).
 Display_RecoverChoiceReset=Ustaw nowe has\u0142o. Je\u015bli nie pami\u0119tasz has\u0142a i chcesz ustawi\u0107 nowe, kliknij tutaj. Twoje konto zostanie te\u017c odblokowane po ustawieniu nowego has\u0142a.
 Display_RecoverChoiceUnlock=Odblokuj swoje konto. Je\u015bli pami\u0119tasz has\u0142o, mo\u017cesz odblokowa\u0107 konto, wybieraj\u0105c t\u0119 opcj\u0119. Twoje has\u0142o nie zostanie zmienione.
-Display_RecoverEnterCode=W celu zweryfikowania Twojej to\u017csamo\u015bci wys\u0142ano Ci kod zabezpiecze\u0144. Kliknij \u0142\u0105cze w wiadomo\u015bci e-mail lub skopiuj kod zabezpiecze\u0144 i wklej go tutaj.
-Display_RecoverEnterCodeSMS=W celu zweryfikowania Twojej to\u017csamo\u015bci wys\u0142ano Ci kod zabezpiecze\u0144 w wiadomo\u015bci SMS. Wprowad\u017a kod zabezpiecze\u0144 z wiadomo\u015bci tutaj.
+Display_RecoverEnterCode=W celu zweryfikowania Twojej to\u017csamo\u015bci wys\u0142ano Ci kod zabezpiecze\u0144 (%1%). Kliknij \u0142\u0105cze w wiadomo\u015bci e-mail lub skopiuj kod zabezpiecze\u0144 i wklej go tutaj.
+Display_RecoverEnterCodeSMS=W celu zweryfikowania Twojej to\u017csamo\u015bci na Tw\u00f3j numer telefonu wys\u0142ano kod zabezpiecze\u0144 (%1%). Wprowad\u017a kod zabezpiecze\u0144 z wiadomo\u015bci tutaj.
 Display_RecoverPassword=Odpowiedz na poni\u017csze pytania. Je\u015bli udzielisz poprawnych odpowiedzi, b\u0119dziesz mie\u0107 mo\u017cliwo\u015b\u0107 zresetowania has\u0142a.
 Display_RecoverPasswordChoices=Konto zosta\u0142o zablokowane z powodu nadmiernej liczby niepoprawnych pr\u00f3b logowania. Mo\u017cesz kontynuowa\u0107 przez odblokowanie konta lub zmian\u0119 has\u0142a.
 Display_RecoverRandomResponses=Aby kontynuowa\u0107, musisz odpowiedzie\u0107 na poni\u017csze pytania.
@@ -165,12 +166,12 @@ Display_SetupOtp_Android_Steps=<b>Zainstaluj aplikacj\u0119 Google Authenticator
 Display_SetupOtp_iPhone_Title=iPhone
 Display_SetupOtp_iPhone_Steps=<b>Na telefonie iPhone stuknij ikon\u0119 App Store.</b><ol><li>Na telefonie przejd\u017a do sklepu App Store.</li><li>Wyszukaj pozycj\u0119 <b>Google Authenticator</b>.<br/>(<a target\="itunesstore" href\="https\://itunes.apple.com/us/app/google-authenticator/id388497605?mt\=8">Pobierz ze sklepu App Store</a>)</li><li>Stuknij aplikacj\u0119, a nast\u0119pnie stuknij przycisk Pobierz, aby pobra\u0107 i zaistalowa\u0107 aplikacj\u0119.</li></ol><b>Nast\u0119pnie otw\u00f3rz i skonfiguruj aplikacj\u0119 Google Authenticator.</b><ol><li>W aplikacji Google Authenticator stuknij symbol \u201e+\u201d, a nast\u0119pnie wybierz opcj\u0119 Zeskanuj kod paskowy.</li><li>Zeskanuj ten kod paskowy przy u\u017cyciu aparatu telefonu.</li><li>Po zeskanowaniu kodu paskowego kliknij przycisk Kontynuuj.</li></ol>
 Display_SetupOtp_Other_Title=Inne
-Display_SetupOtp_Other_Steps=<b>Znajd\u017a zgodn\u0105 aplikacj\u0119 do uwierzytelniania dwuczynnikowego.</b><ul><li>Spr\u00f3buj wyszuka\u0107 w sklepie z aplikacjami urz\u0105dzenia aplikacj\u0119 <b>Google Authenticator</b>.<br/>Wiele urz\u0105dze\u0144 ma zgodne aplikacje.</li><li>Spr\u00f3buj poszuka\u0107 aplikacji, kt\u00f3ra obs\u0142uguje <b>\u201etokeny zabezpiecze\u0144 TOTP\u201d</b> lub \u201eRFC6238\u201d.</li><li>Pobierz i zainstaluj aplikacj\u0119.</li></ul><b>Nast\u0119pnie otw\u00f3rz i skonfiguruj aplikacj\u0119</b><ol><li>Wprowad\u017a dane poni\u017cej lub zeskanuj kod, zgodnie z instrukcj\u0105 aplikacji.</li><li>Po skonfigurowaniu aplikacji kliknij przycisk Kontynuuj.</li></ol>
+Display_SetupOtp_Other_Steps=<b>Znajd\u017a zgodn\u0105 aplikacj\u0119 do uwierzytelniania dwuczynnikowego.</b><ul><li>Spr\u00f3buj wyszuka\u0107 w sklepie z aplikacjami urz\u0105dzenia aplikacj\u0119 <b>Google Authenticator</b>.<br/>Wiele urz\u0105dze\u0144 ma zgodne aplikacje.</li><li>Spr\u00f3buj poszuka\u0107 aplikacji, kt\u00f3ra obs\u0142uguje <b>\u201etokeny zabezpiecze\u0144 TOTP\u201d</b> lub \u201eRFC6238\u201d.</li><li>Pobierz i zainstaluj aplikacj\u0119.</li></ul><b>Nast\u0119pnie otw\u00f3rz i skonfiguruj aplikacj\u0119.</b><ol><li>Wprowad\u017a dane poni\u017cej lub zeskanuj kod, zgodnie z instrukcj\u0105 aplikacji.</li><li>Po skonfigurowaniu aplikacji kliknij przycisk Kontynuuj.</li></ol>
 Display_TokenDestination=Miejsce docelowe tokenu
 Display_TokenResend=Tw\u00f3j kod zabezpiecze\u0144 powinien zosta\u0107 dostarczony od razu. Je\u015bli czekasz od d\u0142u\u017cszego czasu i kod jeszcze nie nadszed\u0142, kliknij przycisk Ponownie wy\u015blij kod, aby otrzyma\u0107 nowy kod.
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=Urz\u0105dzenie zosta\u0142o ju\u017c zarejestrowane dnia <span class="timestamp">%1%</span>. Mo\u017cesz przetestowa\u0107 bie\u017c\u0105ce urz\u0105dzenie, wpisuj\u0105c poni\u017cej wygenerowany kod. W przypadku kontynuowania mo\u017cesz skonfigurowa\u0107 ponownie bie\u017c\u0105ce urz\u0105dzenie.
+Display_WarnExistingOtpSecretTime=Urz\u0105dzenie zosta\u0142o ju\u017c zarejestrowane dnia <span class\="timestamp">%1%</span>. Mo\u017cesz przetestowa\u0107 bie\u017c\u0105ce urz\u0105dzenie, wpisuj\u0105c poni\u017cej wygenerowany kod. W przypadku kontynuowania mo\u017cesz skonfigurowa\u0107 ponownie bie\u017c\u0105ce urz\u0105dzenie.
 Display_WarnExistingOtpSecret=Urz\u0105dzenie zosta\u0142o ju\u017c zarejestrowane. Mo\u017cesz przetestowa\u0107 bie\u017c\u0105ce urz\u0105dzenie, wpisuj\u0105c poni\u017cej wygenerowany kod. W przypadku kontynuowania mo\u017cesz skonfigurowa\u0107 ponownie bie\u017c\u0105ce urz\u0105dzenie.
 Display_WarnExistingResponseTime=Odpowiedzi polecenia odzew/odpowied\u017a zosta\u0142y ju\u017c skonfigurowane dnia <span class\="timestamp">%1%</span>. W przypadku kontynuowania mo\u017cesz odpowiedzie\u0107 ponownie na pytania.
 Display_WarnExistingResponse=Odpowiedzi polecenia odzew/odpowied\u017a zosta\u0142y ju\u017c skonfigurowane. W przypadku kontynuowania mo\u017cesz odpowiedzie\u0107 ponownie na pytania.
@@ -272,7 +273,7 @@ Long_Title_UserInformation=Informacje o ha\u015ble i za\u0142o\u017ceniach hase\
 Long_Title_DeleteAccount=Usu\u0144 swoje konto i profil z tej us\u0142ugi
 Long_Title_VerificationSend=Zanim b\u0119dzie mo\u017cna wybra\u0107 tego u\u017cytkownika, nale\u017cy zweryfikowa\u0107 jego to\u017csamo\u015b\u0107. Wybierz metod\u0119 weryfikacji.
 Title_AnsweredQuestions=Pytania, na kt\u00f3re udzielono odpowiedzi
-Title_ActivateUser=Aktywuj konto
+Title_ActivateUser=Aktywacja konta
 Title_Admin=Administracja
 Title_Captcha=Weryfikacja
 Title_ChangePassword=Zmie\u0144 has\u0142o
@@ -285,7 +286,7 @@ Title_GuestUpdate=Aktualizuj go\u015bcia
 Title_Helpdesk=Pomoc techniczna
 Title_LocaleSelect=Wyb\u00f3r lokalizacji
 Title_Login=Zaloguj si\u0119
-Title_Logout=Wyloguj
+Title_Logout=Wylogowanie
 Title_LogoutPublic=Limit czasu nieaktywno\u015bci
 Title_MainPage=Menu g\u0142\u00f3wne
 Title_NewUser=Rejestracja nowego u\u017cytkownika
@@ -295,6 +296,8 @@ Title_PasswordPolicy=Za\u0142o\u017cenia hase\u0142
 Title_PasswordStrength=Si\u0142a has\u0142a
 Title_PasswordWarning=Ostrze\u017cenie dotycz\u0105ce has\u0142a
 Title_PeopleSearch=Wyszukiwanie os\u00f3b
+Title_PeopleSearchCard=Karty wyszukiwania os\u00f3b
+Title_PeopleSearchTable=Tabele wyszukiwania os\u00f3b
 Title_PleaseWait=Czekaj
 Title_RandomPasswords=Has\u0142a losowe
 Title_RecentVerifications=Ostatnie weryfikacje
