--- a/server/src/main/resources/password/pwm/i18n/Display_zh_TW.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_zh_TW.properties
@@ -1,3 +1,4 @@
+#Thu, 10 Aug 2017 01:24:26 -0400
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -27,7 +28,7 @@ Button_Browse=\u700f\u89bd
 Button_Cancel=\u53d6\u6d88
 Button_ChangePassword=\u8b8a\u66f4\u5bc6\u78bc
 Button_ChangeResponses=\u8fd4\u56de
-Button_CheckCode=\u6aa2\u67e5\u4ee3\u78bc
+Button_CheckCode=\u6aa2\u67e5\u9a57\u8b49\u78bc
 Button_ClearOtpReEnroll=\u91cd\u65b0\u8a3b\u518a\u884c\u52d5\u88dd\u7f6e
 Button_HelpdeskClearOtpSecret=\u6e05\u9664 OTP \u79d8\u5bc6
 Button_ClearResponses=\u6e05\u9664\u7b54\u6848
@@ -79,7 +80,7 @@ Display_CheckingPassword=\u6b63\u5728\u6aa2\u67e5\u5bc6\u78bc...
 Display_CheckingResponses=\u6b63\u5728\u6aa2\u67e5\u7b54\u6848...
 Display_ClientDisconnect=\u7121\u6cd5\u8207\u4f3a\u670d\u5668\u901a\u8a0a\u3002
 Display_CommunicationError=\u7121\u6cd5\u8207\u4f3a\u670d\u5668\u901a\u8a0a\u3002\u6e96\u5099\u5c31\u7dd2\u6642\u5373\u53ef\u7e7c\u7e8c\u3002
-Display_ConfirmResponses=\u8acb\u78ba\u5b9a\u60a8\u7684\u7b54\u6848\u548c\u554f\u984c\u662f\u5426\u6b63\u78ba\u3002\u8acb\u6aa2\u67e5\u62fc\u5b57\u548c\u6a19\u9ede\u7b26\u865f\u3002\u5982\u679c\u5fd8\u8a18\u5bc6\u78bc\uff0c\u60a8\u5fc5\u9808\u63d0\u4f9b\u9019\u4e9b\u5b89\u5168\u6027\u554f\u984c\u7684\u7b54\u6848\u624d\u80fd\u5b58\u53d6\u5e33\u6236\u3002
+Display_ConfirmResponses=\u8acb\u78ba\u8a8d\u60a8\u7684\u7b54\u6848\u548c\u554f\u984c\u90fd\u662f\u6b63\u78ba\u7684\u3002\u8acb\u6aa2\u67e5\u62fc\u5b57\u548c\u6a19\u9ede\u7b26\u865f\u3002\u5982\u679c\u5fd8\u8a18\u5bc6\u78bc\uff0c\u60a8\u5fc5\u9808\u63d0\u4f9b\u9019\u4e9b\u5b89\u5168\u6027\u554f\u984c\u7684\u7b54\u6848\u624d\u80fd\u5b58\u53d6\u5e33\u6236\u3002
 Display_Day=\u5929
 Display_Days=\u5929
 Display_DeleteUserConfirm=\u60a8\u78ba\u5b9a\u8981\u522a\u9664\u5e33\u6236\u55ce\uff1f\u9019\u7121\u6cd5\u5fa9\u539f\u3002
@@ -92,7 +93,7 @@ Display_ForgottenUsername=\u8acb\u8f38\u5165\u4e0b\u5217\u8cc7\u8a0a\u3002\u7cfb
 Display_GuestRegistration=\u82e5\u8981\u8a3b\u518a\u65b0\u7684\u8a2a\u5ba2\u5e33\u6236\uff0c\u8acb\u8f38\u5165\u4e0b\u5217\u8cc7\u8a0a\u3002
 Display_GuestUpdate=\u82e5\u8981\u66f4\u65b0\u8a2a\u5ba2\u5e33\u6236\uff0c\u8acb\u6aa2\u67e5\u4e26\u4fee\u6539\u4e0b\u5217\u8cc7\u8a0a\u3002
 Display_Helpdesk=\u8acb\u8f38\u5165\u4f7f\u7528\u8005\u7684\u641c\u5c0b\u8cc7\u6599\u3002
-Display_HelpdeskOtpValidation=\u6307\u5c0e\u4f7f\u7528\u8005\u8f09\u5165\u5176\u884c\u52d5\u9a57\u8b49\u61c9\u7528\u7a0b\u5f0f\uff0c\u4e26\u5206\u4eab\u76ee\u524d\u7684\u5bc6\u78bc\u3002
+Display_HelpdeskOtpValidation=\u6307\u793a\u4f7f\u7528\u8005\u8f09\u5165\u5176\u884c\u52d5\u9a57\u8b49\u61c9\u7528\u7a0b\u5f0f\uff0c\u4e26\u5206\u4eab\u76ee\u524d\u7684\u5bc6\u78bc\u3002
 Display_Hour=\u5c0f\u6642
 Display_Hours=\u5c0f\u6642
 Display_IdleTimeout=\u9592\u7f6e\u903e\u6642\uff1a
@@ -119,7 +120,7 @@ Display_NAAF_VOICE=\u8a9e\u97f3\u9a57\u8b49\u7a0b\u5e8f\u5df2\u958b\u59cb\u3002\
 Display_NewUser=\u82e5\u8981\u8a3b\u518a\u65b0\u5e33\u6236\uff0c\u8acb\u5b8c\u6210\u4e0b\u5217\u8868\u55ae\u3002
 Display_NewUserProfile=\u82e5\u8981\u8a3b\u518a\u65b0\u5e33\u6236\uff0c\u8acb\u9078\u53d6\u8a2d\u5b9a\u6a94\u3002
 Display_PasswordExpired=\u60a8\u7684\u5bc6\u78bc\u5df2\u904e\u671f\u3002\u60a8\u5fc5\u9808\u7acb\u5373\u8a2d\u5b9a\u65b0\u5bc6\u78bc\u3002
-Display_PasswordGeneration=\u5df2\u70ba\u60a8\u96a8\u6a5f\u7522\u751f\u4e0b\u5217\u5bc6\u78bc\u3002\u70ba\u65b9\u4fbf\u60a8\u8a18\u61b6\uff0c\u7cfb\u7d71\u5c07\u4ee5\u771f\u5be6\u7684\u5b57\u8a5e\u70ba\u57fa\u790e\u4f86\u7522\u751f\u9019\u4e9b\u5bc6\u78bc\uff0c\u4e26\u7a0d\u52a0\u4fee\u6539\u63d0\u9ad8\u731c\u6e2c\u96e3\u5ea6\u3002
+Display_PasswordGeneration=\u5df2\u70ba\u60a8\u96a8\u6a5f\u7522\u751f\u4e0b\u5217\u5bc6\u78bc\u3002\u70ba\u65b9\u4fbf\u60a8\u8a18\u61b6\uff0c\u7cfb\u7d71\u5c07\u4ee5\u771f\u5be6\u7684\u5b57\u8a5e\u70ba\u57fa\u790e\u4f86\u7522\u751f\u9019\u4e9b\u5bc6\u78bc\uff0c\u4e26\u7a0d\u52a0\u4fee\u6539\u4ee5\u63d0\u9ad8\u731c\u6e2c\u96e3\u5ea6\u3002
 Display_PasswordNoExpire=\u60a8\u7684\u5bc6\u78bc\u4e26\u672a\u904e\u671f\u3002
 Display_PasswordPrompt=\u8acb\u8f38\u5165\u60a8\u7684\u65b0\u5bc6\u78bc
 Display_PasswordStrengthHigh=\u5f37\u5ea6\uff1a<b>\u5f37</b>
@@ -138,8 +139,8 @@ Display_RecoverTokenSendChoiceEmail=\u50b3\u9001\u4ee3\u78bc\u81f3\u60a8\u8a3b\u
 Display_RecoverTokenSendChoiceSMS=\u4f7f\u7528\u7c21\u8a0a (SMS) \u50b3\u9001\u4ee3\u78bc\u81f3\u60a8\u7684\u624b\u6a5f\u3002
 Display_RecoverChoiceReset=\u8a2d\u5b9a\u65b0\u5bc6\u78bc\u3002\u5982\u679c\u60a8\u5df2\u5fd8\u8a18\u5bc6\u78bc\u4e14\u60f3\u8981\u8a2d\u5b9a\u65b0\u5bc6\u78bc\uff0c\u8acb\u6309\u4e00\u4e0b\u9019\u88e1\u3002\u8a2d\u5b9a\u65b0\u5bc6\u78bc\u6642\uff0c\u7cfb\u7d71\u4e5f\u6703\u89e3\u9664\u9396\u5b9a\u60a8\u7684\u5e33\u6236\u3002
 Display_RecoverChoiceUnlock=\u89e3\u9664\u9396\u5b9a\u60a8\u7684\u5e33\u6236\u3002\u5982\u679c\u60a8\u8a18\u5f97\u5bc6\u78bc\uff0c\u5247\u53ef\u4ee5\u9078\u53d6\u6b64\u9078\u9805\u4ee5\u89e3\u9664\u9396\u5b9a\u60a8\u7684\u5e33\u6236\u3002\u7cfb\u7d71\u4e0d\u6703\u8b8a\u66f4\u60a8\u7684\u5bc6\u78bc\u3002
-Display_RecoverEnterCode=\u70ba\u4e86\u9a57\u8b49\u60a8\u7684\u8eab\u5206\uff0c\u7cfb\u7d71\u5df2\u5c07\u5b89\u5168\u6027\u4ee3\u78bc\u50b3\u9001\u7d66\u60a8\u3002\u8acb\u6309\u4e00\u4e0b\u96fb\u5b50\u90f5\u4ef6\u4e2d\u7684\u9023\u7d50\uff0c\u6216\u5c07\u5b89\u5168\u6027\u4ee3\u78bc\u8907\u88fd\u4e26\u8cbc\u81f3\u9019\u88e1\u3002
-Display_RecoverEnterCodeSMS=\u70ba\u4e86\u9a57\u8b49\u60a8\u7684\u8eab\u5206\uff0c\u7cfb\u7d71\u5df2\u900f\u904e\u7c21\u8a0a\u5c07\u5b89\u5168\u6027\u4ee3\u78bc\u50b3\u9001\u7d66\u60a8\u3002\u8acb\u5728\u9019\u88e1\u8f38\u5165\u8a72\u5b89\u5168\u6027\u4ee3\u78bc\u3002
+Display_RecoverEnterCode=\u70ba\u4e86\u9a57\u8b49\u60a8\u7684\u8eab\u5206\uff0c\u7cfb\u7d71\u5df2\u5728 %1% \u5c07\u5b89\u5168\u6027\u4ee3\u78bc\u50b3\u9001\u7d66\u60a8\u3002\u8acb\u6309\u4e00\u4e0b\u96fb\u5b50\u90f5\u4ef6\u4e2d\u7684\u9023\u7d50\uff0c\u6216\u5c07\u5b89\u5168\u6027\u4ee3\u78bc\u8907\u88fd\u4e26\u8cbc\u81f3\u9019\u88e1\u3002
+Display_RecoverEnterCodeSMS=\u70ba\u4e86\u9a57\u8b49\u60a8\u7684\u8eab\u5206\uff0c\u7cfb\u7d71\u5df2\u5728 %1% \u900f\u904e\u7c21\u8a0a\u5c07\u5b89\u5168\u6027\u4ee3\u78bc\u50b3\u9001\u7d66\u60a8\u3002\u8acb\u5728\u9019\u88e1\u8f38\u5165\u8a72\u8a0a\u606f\u4e2d\u7684\u5b89\u5168\u6027\u4ee3\u78bc\u3002
 Display_RecoverPassword=\u8acb\u56de\u7b54\u4e0b\u5217\u554f\u984c\u3002\u5982\u679c\u60a8\u53ef\u4ee5\u6b63\u78ba\u56de\u7b54\u9019\u4e9b\u554f\u984c\uff0c\u5c31\u53ef\u4ee5\u91cd\u8a2d\u5bc6\u78bc\u3002
 Display_RecoverPasswordChoices=\u7531\u65bc\u4e0d\u6b63\u78ba\u7684\u767b\u5165\u5617\u8a66\u6b21\u6578\u592a\u591a\uff0c\u56e0\u6b64\u7cfb\u7d71\u5df2\u9396\u5b9a\u60a8\u7684\u5e33\u6236\u3002\u60a8\u5fc5\u9808\u5148\u89e3\u9664\u9396\u5b9a\u60a8\u7684\u5e33\u6236\u6216\u8b8a\u66f4\u60a8\u7684\u5bc6\u78bc\u624d\u80fd\u7e7c\u7e8c\u3002
 Display_RecoverRandomResponses=\u60a8\u5fc5\u9808\u5148\u56de\u7b54\u4e0b\u5217\u554f\u984c\u624d\u80fd\u7e7c\u7e8c\u3002
@@ -170,11 +171,11 @@ Display_TokenDestination=\u8a18\u865f\u76ee\u7684\u5730
 Display_TokenResend=\u60a8\u7684\u5b89\u5168\u4ee3\u78bc\u5c07\u7acb\u523b\u62b5\u9054\u3002\u82e5\u60a8\u5df2\u7b49\u5019\u591a\u6642\u4e14\u5c1a\u672a\u6536\u5230\u4ee3\u78bc\uff0c\u8acb\u6309\u4e00\u4e0b\u91cd\u65b0\u50b3\u9001\u4ee3\u78bc\u6309\u9215\u4ee5\u63a5\u6536\u65b0\u7684\u4ee3\u78bc\u3002
 Display_UsernameHeader=@User\:ID@
 Display_UsernameFooter=@User\:ID@
-Display_WarnExistingOtpSecretTime=\u60a8\u5df2\u7d93\u5728 <span class="timestamp">%1%</span> \u4e0a\u8a3b\u518a\u60a8\u7684\u88dd\u7f6e\u3002\u60a8\u53ef\u4ee5\u900f\u904e\u5728\u7522\u751f\u7684\u4ee3\u78bc\u4e0b\u65b9\u8f38\u5165\u4f86\u6e2c\u8a66\u60a8\u76ee\u524d\u7684\u88dd\u7f6e\u3002\u82e5\u60a8\u7e7c\u7e8c\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u8a2d\u5b9a\u60a8\u76ee\u524d\u7684\u88dd\u7f6e\u3002
+Display_WarnExistingOtpSecretTime=\u60a8\u5df2\u65bc\u4e2d\u570b\u6a19\u6e96\u6642\u9593 <span class\="timestamp">%1%</span> \u8a3b\u518a\u88dd\u7f6e\u3002\u60a8\u53ef\u4ee5\u4e0b\u65b9\u8f38\u5165\u7522\u751f\u7684\u9a57\u8b49\u78bc\uff0c\u4ee5\u6e2c\u8a66\u76ee\u524d\u7684\u88dd\u7f6e\u3002\u5982\u679c\u60a8\u7e7c\u7e8c\u7684\u8a71\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u8a2d\u5b9a\u76ee\u524d\u7684\u88dd\u7f6e\u3002
 Display_WarnExistingOtpSecret=\u60a8\u5df2\u8a3b\u518a\u88dd\u7f6e\u3002\u60a8\u53ef\u4ee5\u5728\u4e0b\u65b9\u8f38\u5165\u7522\u751f\u7684\u4ee3\u78bc\uff0c\u4ee5\u6e2c\u8a66\u76ee\u524d\u7684\u88dd\u7f6e\u3002\u5982\u679c\u60a8\u7e7c\u7e8c\u9032\u884c\uff0c\u5247\u53ef\u4ee5\u91cd\u65b0\u8a2d\u5b9a\u76ee\u524d\u7684\u88dd\u7f6e\u3002
-Display_WarnExistingResponseTime=\u60a8\u5df2\u65bc <span class\="timestamp">%1%</span> \u8a2d\u5b9a\u8655\u7406\u5b89\u5168/\u56de\u61c9\u7b54\u6848\u3002\u5982\u679c\u60a8\u7e7c\u7e8c\u9032\u884c\uff0c\u5247\u53ef\u4ee5\u91cd\u65b0\u56de\u7b54\u554f\u984c\u3002
+Display_WarnExistingResponseTime=\u60a8\u5df2\u65bc\u4e2d\u570b\u6a19\u6e96\u6642\u9593 <span class\="timestamp">%1%</span> \u8a2d\u5b9a\u8655\u7406\u5b89\u5168/\u56de\u61c9\u7b54\u6848\u3002\u5982\u679c\u60a8\u7e7c\u7e8c\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u56de\u7b54\u554f\u984c\u3002
 Display_WarnExistingResponse=\u60a8\u5df2\u8a2d\u5b9a\u8655\u7406\u5b89\u5168/\u56de\u61c9\u7b54\u6848\u3002\u5982\u679c\u60a8\u7e7c\u7e8c\u9032\u884c\uff0c\u5247\u53ef\u4ee5\u91cd\u65b0\u56de\u7b54\u554f\u984c\u3002
-Display_PleaseVerifyOtp=\u8acb\u70ba\u60a8\u7684\u88dd\u7f6e\u8f38\u5165 6 \u4f4d\u6578\u9a57\u8b49\u78bc\u3002\u5982\u679c\u672a\u5c07\u88dd\u7f6e\u8a2d\u70ba\u70ba\u60a8\u63d0\u4f9b\u9a57\u8b49\u78bc\uff0c\u8acb\u8fd4\u56de\u4e0a\u4e00\u9801\u4e26\u8a2d\u5b9a\u60a8\u7684\u88dd\u7f6e\u3002
+Display_PleaseVerifyOtp=\u8acb\u8f38\u5165\u4f86\u81ea\u60a8\u88dd\u7f6e\u7684 6 \u4f4d\u6578\u9a57\u8b49\u78bc\u3002\u5982\u679c\u672a\u5c07\u88dd\u7f6e\u8a2d\u70ba\u70ba\u60a8\u63d0\u4f9b\u9a57\u8b49\u78bc\uff0c\u8acb\u8fd4\u56de\u4e0a\u4e00\u9801\u4e26\u8a2d\u5b9a\u60a8\u7684\u88dd\u7f6e\u3002
 Display_OtpRecoveryInfo=\u6bcf\u500b\u5fa9\u539f\u4ee3\u78bc\u50c5\u80fd\u5728\u60a8\u7121\u6cd5\u5b58\u53d6\u624b\u6a5f\u6642\u4f7f\u7528\u4e00\u6b21\u3002\u8acb\u52d9\u5fc5<a class\="pwm-link-print">\u5217\u5370\u6b64\u9801\u9762</a>\u6216\u8a18\u4e0b\u9019\u4e9b\u4ee3\u78bc\u4e26\u5b58\u653e\u65bc\u5b89\u5168\u4f4d\u7f6e\u3002
 Display_OtpClearWarning=\u60a8\u78ba\u5b9a\u8981\u7e7c\u7e8c\u55ce\uff1f\u5982\u679c\u60a8\u7e7c\u7e8c\u9032\u884c\uff0c\u7cfb\u7d71\u4fbf\u6703\u6e05\u9664\u73fe\u6709\u8a3b\u518a\uff0c\u4e14\u60a8\u5fc5\u9808\u91cd\u65b0\u8a2d\u5b9a\u88dd\u7f6e\u3002
 Display_ResponsesClearWarning=\u60a8\u78ba\u5b9a\u8981\u7e7c\u7e8c\u55ce\uff1f\u5982\u679c\u60a8\u7e7c\u7e8c\u9032\u884c\uff0c\u7cfb\u7d71\u4fbf\u6703\u6e05\u9664\u73fe\u6709\u7b54\u6848\uff0c\u4e14\u60a8\u5fc5\u9808\u91cd\u65b0\u56de\u7b54\u5b89\u5168\u6027\u554f\u984c\u3002
@@ -295,6 +296,8 @@ Title_PasswordPolicy=\u5bc6\u78bc\u898f\u5247
 Title_PasswordStrength=\u5bc6\u78bc\u5f37\u5ea6
 Title_PasswordWarning=\u5bc6\u78bc\u8b66\u544a
 Title_PeopleSearch=\u4eba\u54e1\u641c\u5c0b
+Title_PeopleSearchCard=\u4eba\u54e1\u641c\u5c0b\u5361
+Title_PeopleSearchTable=\u4eba\u54e1\u641c\u5c0b\u8868\u683c
 Title_PleaseWait=\u8acb\u7a0d\u5019
 Title_RandomPasswords=\u96a8\u6a5f\u5bc6\u78bc
 Title_RecentVerifications=\u6700\u8fd1\u7684\u9a57\u8b49
