--- a/server/src/main/resources/password/pwm/i18n/Message_pl.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_pl.properties
@@ -55,7 +55,7 @@ EventLog_SetupResponses=Skonfigurowanie odpowiedzi do has\u0142a
 Eventlog_SetupOtpSecret=Skonfigurowanie klucza tajnego has\u0142a jednorazowego
 EventLog_UpdateProfile=Aktualizacja atrybut\u00f3w
 EventLog_DeleteAccount=Usuni\u0119cie konta
-Requirement_ADComplexity=Musi mie\u0107 co najmniej trzy typy nast\u0119puj\u0105cych znak\u00f3w: <ul><li>Wielka litera (A\u2013Z)</ li><li>Ma\u0142a litera (a\u2013z)</ li>Cyfra <li>(0\u20139)</ li>< li>Symbol (!, #, $ itp.)</ li></ ul>
+Requirement_ADComplexity=Musi mie\u0107 co najmniej trzy typy nast\u0119puj\u0105cych znak\u00f3w: <ul><li>Wielka litera (A-Z)</li><li>Ma\u0142a litera (a-z)</li><li>Cyfra (0-9)</li><li>Symbol (!, #, $ itp.)</li></ul>
 Requirement_ADComplexity2008=Musi mie\u0107 co najmniej %1% typ. nast\u0119puj\u0105cych znak\u00f3w: <ul><li> Wielka litera (A\u2013Z)</ li><li>Ma\u0142a litera (a\u2013z) </ li>Cyfra<li> (0\u20139)</ li>< li>Symbol (!, #, $ itp.)</li><li>Inne znaki j\u0119zykowe niewymienione powy\u017cej</li></ul>
 Requirement_AllowNumeric=Nie mo\u017ce zawiera\u0107 \u017cadnych cyfr.
 Requirement_AllowSpecial=Nie mo\u017ce zawiera\u0107 \u017cadnych symboli (nieb\u0119d\u0105cych liter\u0105 ani cyfr\u0105).
